--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -32,6 +32,9 @@ km:
     users username not available: "ឈ្មោះ​ដែល​លោក​អ្នក​បាន​ផ្ដល់​មិន​មាន​ទេ"
     users username or password invalid: "ឈ្មោះអ្នកប្រើប្រាស់ រឺអក្សរសំងាត់ដែលអ្នកបានផ្ដល់ឱ្យ​ អស់សុពលភាព​ហើយ​ ។"
     users username required: "លោកអ្នកត្រូវតែបញ្ចូលឈ្មោះអ្នកប្រើប្រាស់ ។"
+    users first name required: "អ្នក​ត្រូវ​បញ្ចូល​កោត្ត​នាម"
+    users last name required: "អ្នក​ត្រូវ​បញ្ចូល​នាម"
+    moments content required: "មាតិការ​មិន​អាច​ទទេ​រ​បាន​ឡើយ។"
   meta:
     kids_app:
       title: "កម្ម​វិធី​ព្រះ​គម្ពីរ​សម្រាប់​កុមារ"
@@ -62,7 +65,7 @@ km:
   new note: "កំណត់​ត្រាថ្មី"
   share success: "សារ​របស់​លោក​អ្នកត្រូវ​បាន​ចែក​រំលែក"
   share error: "សូមទោស មាន​កំហុស​ក្នុង​ពេល​ចែក​រំលែក​សារ​របស់​អ្នក។ សូម​ព្យាយាមម្ដង​ទៀត"
-  google plus: "Google +"
+  google plus: "Google+"
   connect to: "ភ្ជាប់​គណនី​របស់​អ្នក %{connection}"
   deleted connection: "ការ​ភ្ជាប់​របស់​លោក​អ្នក​ត្រូវ​បាន​ដក​ចេញ​ទៅ %{connection}"
   deleted connection error: "សូម​ទោស មាន​កំហុស​ខ្លះៗ​ក្នុង​ការ​ដក​ចេញ​នូវ​ការ​ភ្ជាប់​របស់​លោក​អ្នក​ទៅ %{connection}"
@@ -131,17 +134,14 @@ km:
   chapter: "ជំពូក"
   bible: "ព្រះគម្ពីរ"
   notes title: "កំណត់​ត្រា"
-  friends: "មិត្ត​ភក្តិ"
   groups: "ក្រុម"
   mobile: "ទូរសព្ទ័ចល័ត"
   live: "ផ្ទាល់/ក្រុម"
   first page: "ទំព័រ​តំបូង"
   last page: "ទំព័រ​ចុង​ក្រោយ"
-  next page: "ទំព័រ​បន្ទាប់"
-  previous page: "ទំព័រ​មុន"
   invalid username or password: "ឈ្មោះ​ប្រើ​ប្រាស់ និង​ ពាក្យ​សម្ងាត់​មិន​ត្រឹម​ត្រូវ"
   show all bookmarks: "មើលកំណត់​ចំណាំ​​ទាំង​អស់ %{total}"
-  show all notes: "មើល​កំណត់​ត្រា​ទាំងអស់ %{total}"
+  show all notes: "មើល​កំណត់​ត្រា​ទាំង​អស់"
   recent bookmarks: "កំណត់​ចំណាំ​ថ្មីៗ"
   percentage display: "%{number}%"
   myself: "ខ្ញុំ"
@@ -152,7 +152,110 @@ km:
   or:
     lower: "ឬ"
     upper: "រឺ"
+  moments:
+    vod:
+      title: "ខគម្ពីរ​ប្រចាំ​ថ្ងៃ"
+    friendship:
+      now friends: "ឥឡូវ​អ្នក​ជា​មិត្ត​ជាមួយ​នឹង"
+    cta:
+      profile update text: "ជួយ​មិត្ត​របស់​អ្នក​រក​អ្នក"
+      profile update button: "អាប់ឌែត​ទម្រង់​របស់​អ្ន"
+      sharing text: "ចែក​រំលែក​ខគម្ពីឬ​ជាមួយ​នឹង​បណ្ដាញ​សង្គម"
+      sharing button: "តំណើរ​ការ ចែក​រំលែក"
+      friends text: "មើលការ​ប៉ះពាល់​ចិត្ត​របស់​មិត្ត​អ្នកក្នុង​ព្រះ​គម្ពីរ"
+      friends button: "រក​មិត្ត​ភក្តិ"
+    action:
+      go to scripture: "ទៅ​កាន់​បទ​គម្ពីរ"
+      load more: "ទាញ​យក ថែម​ទៀត"
+      like: "ចូល​ចិត្ត"
+      liked: "បាន​ចូល​ចិត្ត"
+      like title: "ចូល​ចិត្ត​ នេះ"
+      last comment: "មតិ​ចុង​ក្រោយ"
+      share: "ចែក​រំលែក"
+      share title: "ចែក​រំលែក​នេះ​ជាមួយ​មិត្ត ឬ​គ្រួសារ"
+      comment: "មតិ"
+      comment title: "មើល​មតិ​ទាំង​អស់"
+      edit: "កែរ"
+      edit highlight title: "កែរ​គំនូស​ពណ៌​នេះ"
+      edit bookmark title: "កែរ​កំណត់​ចំណាំ"
+      edit note title: "កែរ​កំណត់​ត្រា"
+      delete: "លុប"
+      delete confirm: "តើ​អ្នក​ប្រាកដ​ទេ?"
+      delete highlight title: "លុប​គំនូស​ពណ៌​នេះ"
+      delete bookmark title: "លុប​កំណត់​ចំណាំ​នេះ"
+      delete note title: "លុប​កំណត់​ត្រា​នេះ"
+  notifications:
+    title: "ការ​តឿន​រំលឹក"
+    none: "អ្នក​មិន​មាន​ការ​តឿន​រំលឹក​ទេ"
+    no new: "មិន​មាន​សារ​តឿន​ថ្មី"
+    view all: "មើល​ការ​តឿន​ទាំង​អស់"
+  likes:
+    create success: "ជោគ​ជ័យ! ចូល​ចិត្ត របស់​អ្នក​បាន​រក្សា​ទុក"
+    create failure: "ចូល​ចិត្ត របស់​អ្នក​មិន​អាច​រក្សា​ទុក​ឡើយ"
+    destroy success: "ចូល​ចិត្ត​បាន​លុប"
+    destroy failure: "ចូល​ចិត្ត​ របស់​អ្នក​មិន​អាច​លប់​បាន​ឡើយ"
+  comments:
+    view all N: "មើលមតិ​ទាំង​អស់​របស់ %{count}"
+    post comment: "ផ្សាយ​មតិ"
+    create success: "ជោគ​ជ័យ! មតិ​របស់​អ្នក​បាន​បិទ​ផ្សាយ"
+    create failure: "មតិ​មិន​អាច​ផ្សាយ​បាន​ទេ"
+    destroy success: "មតិ​បាន​លុប"
+    destroy failure: "មតិ​មិន​អាច​លុប​បាន​ឡើយ"
+    form:
+      save button: "ផ្សាយ"
+  friends:
+    you have N friends: "អ្នក​មានមិត្ត %{count} នាក់"
+    none me: "ចែក​រំលែក​មតិ​របស់​អ្នក​ក្នុងព្រះ​គម្ពីរ​ដូចជា កំណត់​ចំណាំ, គំនូស​ពណ៌, និង​កំណត់​ត្រា​ជាមួយ​មិត្ត​ជិត​ស្និទ្ធ និង​គ្រួសារ​របស់​អ្នក​"
+    find friends: "រក​មិត្ត​ភក្តិ"
+    blank slate:
+      heading: "មិន​មាន​មិត្ត​ថ្មី​នេះ"
+      description: "អ្នក​ត្រូវធ្វើ​ជាមិត្ត​របស់​បុគ្គល​នេះ ដើម្បី​អាច​មើល​មិត្ត​របស់​គាត់​បាន។"
+    limit notice: "អ្នក​អាច​មាន​មិត្ត​ច្រើន​ដូច​ជា​150"
+    limit description: "ការ​កំណត់​មិត្ត​លើ​កម្ម​វិធី​ព្រះ​គម្ពីរ​គឺ​ដើម្បី​អោយ​មនុស្ស​ស្គាល់​និងបង្កើត​នូវ​បរិយាកាស​នៃ​ភាព​ស្មោះត្រង់​ក្នុង​ការ​សន្ទនា​និង​ចែក​រំលែក​នូវ​អ្វី​ដែល​បាន​រក​ឃើញ​ជាមួយ​មិត្ត​ជិតស្និទ្ធ​របស់​គេ។"
+  friendships:
+    find friends title: "រក​មិត្ត​ភក្តិ"
+    widget:
+      find friends title: "រក​មិត្ត​ភក្តិ"
+    offer success: "សំណើរ​ជា​មិត្ត​បាន​ផ្ញើរ"
+    offer failure: "បញ្ហា​ ក្នុង​ការ​ផ្ញើរ​សំណើរ​ជា​មិត្ត"
+    create success: "ជោគ​ជ័យ! អ្នក​ជា​មិត្ត​ភក្តិ​នឹង​គ្នា​ហើយ"
+    create failure: "បញ្ហា បង្កើត​មិត្ត​ភាព"
+    destroy success: "សំណើរ​ត្រូវ​បដិសេធ"
+    destroy failure: "បញ្ហា បដិសេធ​សំណើរ"
+    requests title: "រក​សំណើរ"
+    requests view all: "មើល​សំណើរ​មិត្ត​ទាំង​អស់"
+    requests none: "អ្នក​មិន​មាន​សំណើរ​ជា​មិត្ត​ទេ"
+    requests no new: "មិន​មាន​សំណើរ​ថ្មី"
+    status:
+      pending: "សំណើរ​កំពុង​រង់ចាំ"
+      friends: "មិត្ត​ភក្តិ"
+    user wants friendship: "%{user} ចង់​ធ្វើ​ជា​មិត្ត​អ្នក"
+    user wants friendship partial: "ចងធ្វើ​ជា​មិត្ត​អ្ន"
+    form:
+      remove friend button: "ដក​មិត្ត​ចេញ"
+      remove friend button title: "ដក​បុគ្គល​នេះ​ចេញ​ពី​បញ្ជីរ​មិត្ត​របស់​អ្ន"
+      add friend button: "បន្ថែម​មិត្ត"
+      add friend button title: "ផ្ញើរ %{user} សំណើរ​មិត្ត​ភាព"
+      accept button: "ទទួល"
+      accept request button: "ទទួល​យក​សំណើរ"
+      ignore button: "បដិសេធ"
+      ignore request button: "បដិសេធ​សំណើរ"
   notes:
+    none user: "%{username} មិន​ទាន់​មាន​កំណត់​ត្រា​នៅ​ឡើយ​ទេ"
+    blank slate:
+      heading: "អ្នក​មិន​ទាន​មាន​កំណត់​ត្រា​ទេ"
+      description: "ពេល​ដែល​អ្នក​កំពុង​អាន​ព្រះ​គម្ពីរ ហើយ​ពេល​អ្នក​មាន​អារម្មណ៍​ថា​ព្រះ​កំពុង​មាន​បន្ទូល​មក​កាន់​អ្នក លោក​អ្នក​អាច​បន្ថែម​គំនិត​ទាំង​នោះ​នៅ​ទី​នេះ។ កំណត់​ត្រា​របស់​អ្នក​នឹង​កំណត់​ជា <em>ឯកជន</em> តែម្ដង. ប្រសិន​បើ​អ្នក​ចង់​ចែក​រំលែក​កំណត់​ត្រា​នេះ​ជាមួយ​មិត្ត​របស់​អ្នក ងាយ​ស្រួល​បំផុត​ដោយ​គ្រាន់​តែ​បើ​ក​វា​ហើយ​ប្ដូរ​ទៅ​ជា<em>សាធារណះ</em>."
+    form:
+      title field: "ចំណង​ជើង"
+      content field: "មាតិការ"
+      reference field: "សេចក្ដី​យោង"
+      status field: "ស្ថាន​ភាពៈ"
+      save button: "រក្សា​ទុក"
+    status:
+      private: "ឯក​ជន"
+      public: "សាធារណះ"
+      friends: "ជា​មិត្ត​ ប៉ុណ្ណោះ"
+      draft: "សេចក្ដី​ព្រាង"
     list title: "កំណត់​ត្រា"
     loading community: "កំពុង​ទាញ​យក​កំណត់​ត្រា​សហគមន៍"
     no community notes: "រកឃើញមិន​មាន​កំណត់​ត្រា​សហគមន៍​យោង​ទៅ​លើ​ខគម្ពីរ​ដែល​បាន​ជ្រើស​រើសទេ។ ដើម្បី​បង្កើត​កំណត់​ត្រា, ជ្រើស​រើស​ខ​គម្ពីរ​ ហើយ​ចុច​លើប៊ូតុង​ជ្រើស​រើស​នៅ​ខាង​ផ្នែក​កម្ម​វិធីអាន​គម្ពីរ។"
@@ -160,6 +263,7 @@ km:
     private: "ឯកជន"
     is private: "កំណត់ត្រាដែល​ត្រូវ​បាន​ស្នើសុំ មានលក្ខណៈ​ឯកជន ។"
     draft: "សេចក្ដី​ព្រាង"
+    friends: "មិត្ត​ភក្តិ"
     creation form errors: "កំហុស​ទាំង​នេះ​ រារាំង​នូវ​ការបង្កើត​កំណត់​ត្រា​របស់​អ្នក"
     reference field: "សេចក្ដី​យោង"
     version field: "ជំនាន់"
@@ -180,7 +284,10 @@ km:
     cancel: "បោះ​បង់"
     pop out: "លេច​ចេញ​មក"
     none found: "មិន​មាន​កំណត់​ត្រា​ត្រូវ​បាន​រក​ឃើញ​ឡើយ..."
-    successfully deleted: "កំណត់​ត្រា ត្រូវ​បាន​ដក​ចេញ"
+    create success: "ជោគ​ជ័យ! កំណត់​ត្រា​របស់​អ្នក​បាន​រក្សា​ទុក"
+    create failure: "មាន​បញ្ហា​ពេលរក្សា​កំណត់​ត្រា"
+    destroy success: "កំណត់​ត្រា​បាន​លុបចេញ"
+    destroy failure: "បញ្ហា ពេល​លុប​កំណត់​ត្រា"
   ref:
     loading secondary: "ទាញយកអំណៈអំណាង​ពី​ជំនាន់​ទី២..."
     clear verses: "សំអាតខ​ដែល​បាន​ជ្រើស​រើស"
@@ -211,6 +318,8 @@ km:
     profile form errors: "កំហុស​មួយ​នេះ(ច្រើន) រារាំង​អ្នក​ក្នុង​ការ​បន្ទាន់​សម័យ​លើ​ទម្រង់​របស់​អ្នកៈ"
     email address: "អាស័យ​ដ្ឋាន​អ៊ី​ម៉ែល"
     user name: "ឈ្មោះ​ប្រើ​ប្រាស់"
+    first name: "នាម"
+    last name: "កោត្ត​នាម"
     agreement: "ខ្ញុំ​យល់​ព្រម​ទៅ​នឹង YouVersion %{terms_link}"
     terms and conditions: "ច្បាប់ និងលក្ខខន្តិកៈ"
     facebook sign up success: "ល្អ​ណាស់! អ្នក​ត្រូវ​បាន​អនុញ្ញាត​ជាមួយនឹង​ហ្វេសប៊ុក។ រើស​យកឈ្មោះ​ប្រើ​ប្រាស់ និង​ ពាក្យ​សម្ងាត់ YouVersion រួច​បន្ត។"
@@ -240,6 +349,7 @@ km:
     edit account_existence: "លុប​គណនី"
     delete account button: "លុប​គណនី​ YouVersion របស់​ខ្ញុំ"
     no devices: "មិន​មាន​ឧបករណ៍​បាន​ភ្ជាប់​មក​កាន់​គណនី YouVersion​ របស់​អ្នក​ទេ"
+    no devices download copy: "អាស្រ័យ​ទៅ​លើ​ព្រះ​គម្ពីរ​លើ​បណ្ដាញ, YouVersion.com, Bible App ជា​កម្ម​វិធី​ព្រះ​គម្ពីរ​លើ​ឧបករណ៍​ចល័ត​ដែល​អាច​ប្រើ​ប្រាស់​លើ​សឹង​តែ​គ្រប់​ឧបករណ៍​ចល័ត​ទាំង​អស់។ Bible App អនុញ្ញាត្តិ​អោយ​អ្នក​ប្រើ​ប្រាស់​ អាន​ព្រះ​គម្ពីរ, ចែក​រំលែក​ខ​ព្រះ​គម្ពីរ, និង more&mdash; ទាំង​អស់​នៅ​លើ​ទម្រង់​មួយ​ដែល​អាច​អោយ​អ្នក​បន្តប្រើ​លើ​ឧបករណ៍​ចល័ត​បាន​យ៉ាង​ល្អ។ ចូល​មក​កាន់  <a href='https://www.bible.com/app'>bible.com/app</a> ពី​ឧបករណ៍​ចល័ត​របស់​អ្នកដើម្បី​ដោនឡូដ Bible App ហើយ​ភ្ជាប់​មក​កាន់​គណនី​របស់​អ្នក"
     yes delete: "បាទ/ចា៎ លុប​គណនី​របស់ខ្ញុំ"
     account delete success: "គណនី​ YouVersion ត្រូវ​បាន​លុប​ចេញ​ជា​ស្ថាពរ។ យើង​សង្ឃឹម​ថា​លោក​អ្នក​នឹង​បន្ត​រក​វិធី​ដ៏​មានន័យ​ផ្សេង​ៗ​ក្នុង​ការ​ផ្សារ​ភ្ជាប់​ជាមួយ​ព្រះ​គម្ពីរ។ កម្ម​វិធី​ផ្សេង​ៗ​ទៀត​នឹង​ជួយ​លោក​អ្នក​ក្នុង​ការ​អាន​ព្រះ​គម្ពីរៈ <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "ប្រសិន​បើ​អ្នក​លុប​គណនី​របស់​អ្នក នោះ​អ្នក​នឹង​ត្រូវ​បាន​ដកចេញ​នូវ ព័ត៌មាន, ប្រវត្ត, និង​ការ​រៀប​ចំរបស់​អ្នក​ជា​រៀង​រហូត (ដូច​ជា​កំណត់​ត្រា, កំណត់​ចំណាំ, ការគូស​ពណ៌​ចំណាំ, ។ល។) ដែល​មាន​នៅ​ក្នុង YouVersion.com ហើយនិង Bible App។ ទាំង​នេះ​នឹង​មិន​អាច​ទាញ​ត្រឡប់​មក​វិញ​ដោយ​ខ្លួន​អ្នក ឬ​ក្រុម​របស់​យើង​បាន​ឡើយ។ ប្រសិនបើ​អ្នក​ពិត​ជា​ចង់​មែន​សូម​បន្ត ដំណើរការ​ខាងក្រោម។"
@@ -253,7 +363,7 @@ km:
     my badges: "ផ្លាក​សញ្ញា​របស់​ខ្ញុំ"
     revised date: "កំនែរ​ចុង​ក្រោយ​នៅ​ %{date}"
     update email copy: "បញ្ជូល​អ៊ី​ម៉ែល​ថ្មី ហើយ​ចុច អាប់ឌែត​អ៊ី​ម៉ែល។ យើង​នឹង​ផ្ញើរ​តំណរ​មួយ​ដើម្បី​បញ្ជាក់​ពី​អ៊ី​ម៉ែល​ថ្មី​របស់​អ្នក។"
-    edit email: "អាប់ឌែត​អ៊ី​ម៉ែល"
+    edit email: "ប្ដូរ អាស័យ​ដ្ឋាន អ៊ី​ម៉ែល"
     update email check: "សូម​ឆែក​អ៊ី​ម៉ែល ហើយ​ចុច​លើ​តំណរ​ភ្ជាប់ ដើម្បី​បញ្ជាក់​ពី​អ៊ី​ម៉ែល​ថ្មី​របស់​អ្នក។"
     confirm update email success: "អរគុណ! លោក​អ្នក​បាន​អាប់ឌែតនូវ​អាស័យដ្ឋាន​អ៊ី​ម៉ែល​ហើយ។"
     confirm update email error: "សូម​ទោស មាន​បញ្ហា​ក្នុង​ការ​បញ្ចប់​ការ​ប្ដូរ​អាស័យដ្ឋាន​អ៊ី​ម៉ែល​របស់​អ្នក។"
@@ -354,6 +464,16 @@ km:
       general title: "ព័ត៌មាន​ទូទៅ"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "ទៅ​មុខ​ទៀត គ្មាន​អ្វី​មើល​ទេ​នៅទីនេះ (មិនទាន់មាន)"
+        description: "ចាប់​ផ្ដើម​ប្រាស្រ័យ​ជាមួយ​ព្រះគម្ពីរ ឬ​មិត្ត​របស់​អ្នក ហើយ​ទំព័រ​នេះ​នឹង​បង្ហាញ​ពី​ប្រវត្ត​នៃ​កិច្ច​ការ​របស់​អ្នក។"
+      visit friend: "មើល​ទំម្រង់ %{friend}"
+      tab activity: "សកម្ម​ភាព"
+      tab friends: "មិត្ត​ភក្តិ"
+      tab notes: "កំណត់​ត្រា"
+      tab bookmarks: "កំណត់​ចំណាំ​ច្រើន"
+      tab highlights: "គូស​ចំណាំៈ"
+      tab badges: "ផ្លាក​សញ្ញា"
       first name: "នាម"
       last name: "កោត្ត​នាម"
       email: "អាស័ដ្ឋាន​អ៊ីម៉ែល"
@@ -393,6 +513,10 @@ km:
       reading_plans: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពី​ព័ត៌មាន​សំរាប់​គំរោង​អាន​ដែល​ខ្ញុំ​បាន​ចាប់​ផ្ដើម។"
       publishing partners: "ជួយ​ប្រាប់​តំណឹង​ដល់​ខ្ញុំ​ពេល​មាន​ការ​អាប់ឌែតពី មាតិការ​ដៃ​គូរ​របស់ YouVersion"
       update: "អាប់ឌែត​ការ​ប្រាប់​ដំណឹង"
+      friendships: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពេល​មាន​សំណើរ​ពី​មិត្ត​ភក្តិ"
+      moments: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​អំពី​សកម្ម​ភាព​របស់​មិត្ត"
+      comments: "ប្រាប់​ខ្ញុំ​អោយ​ដឹង​ពី​មតិ​លើ​សកម្ម​ភាព​របស់​ខ្ញុំ"
+      likes: "ប្រាប់​ខ្ញុំ​អោយ​ដឹងពី ចូល​ចិត្ត លើ​សកម្ម​ភាព​របស់​ខ្ញុំ"
   bookmarks:
     new: "កំណត់​ចំណាំ​ថ្មី"
     edit: "កែសម្រួល"
@@ -406,9 +530,10 @@ km:
     not found: "កំណត់​ចំណាំ​នឹង​ផ្ដល់​នូវ​សេចក្ដី​យោង​ដោយ​មាន​ភាព​រហ័សទៅកាន់​អ្វី​ដែល​អ្នក​ចូល​ចិត្តឬ​ជំពូក​ចុង​ក្រោយ​ដែល​អ្នក​បាន​អាន​នៅ​ក្នុង​សៀវ​ភៅ។ ដើម្បី​បញ្ចូល​កំណត់​ចំណាំ ជ្រើស​រើស​ខព្រះគម្ពីរ​ក្នុង​កម្ម​វិធី​អានព្រះគម្ពីរ ហើយ​ចុច​លើ​ប៊ូតុង​ជ្រើស​រើស​នៅ​ខាង​លើ​នៃ​កម្ម​វិធី​អាន។"
     other user not found: "%{username} មិន​ទាន់​បាន​រក្សាទុក​នូវ​កំណត់​ចំណាំ​ទេ"
     creation form errors: "មាន​កំហុស​ (ច្រើន)​កើត​មាន​ឡើង ក្នុង​ការ​បង្កើត​នូវ​កំណត់​ចំណាំ​របស់​លោក​អ្នក៖"
-    successfully created: "កំណត់​ចំណាំ​ត្រូវ​បាន​បន្ថែម"
-    successfully deleted: "ដក​កំណត់​ចំណាំ​ចេញ"
-    successfully updated: "អាប់​ឌែត​កំណត់​ចំណាំ"
+    create success: "ជោគ​ជ័យ! កំណត់​ចំណាំ​របស់​អ្នក​បាន​រក្សា​ទុក"
+    destroy success: "កំណត់​ចំណាំ​បាន​ដក​ចេញ"
+    destroy failure: "មាន​បញ្ហា​ពេល​លុប​កំណត់​ចំណាំ"
+    update success: "កំណត់​ចំណាំ​បាន​អាប់​ឌែត"
     labels placeholder: "ចែក​ពហុ​ផ្លាកដោយ​ប្រើ​ក្បៀស"
     save: "រក្សា​កំណត់​ចំណាំ"
     confirm delete: "បាទ/ចា៎ ខ្ញុំ​ច្បាស់​ហើយ"
@@ -419,10 +544,32 @@ km:
     update: "អាប់ឌែត"
     color: "ពណ៌ៈ"
     version field: "ជំនាន់ៈ"
+    none user: "%{username} មិន​មាន​កំណត់​ចំណាំ"
+    blank slate:
+      heading: "កំណត់​ចំណាំ​ខគម្ពីរ​ដែល​មានន័យ"
+      description: "ពេល​អាន​ព្រះ​គម្ពីរ ជ្រើស​រើស​យក​ខគម្ពីរ​ហើយ​កត់​ចំណាំ​វា។ ត្រប់​មក​ទីនេះ ដើម្បី មើល កែសម្រួល ឬ​លុប​កំណត់​ចំណាំ​របស់​អ្នក"
+    form:
+      title field: "ចំណង​ជើង"
+      reference field: "សេច​ក្ដីព្រាងៈ"
+      labels field: "ផ្លាក (ផ្ដាច់​ដោយ​ប្រើ​សញ្ញា​ក្បៀស)"
+      colors field: "ពណ៌ៈ"
+      update button: "អាប់​ឌែត​កំណត់​ចំណាំ"
+      save button: "រក្សា​កំណត់​ចំណាំ"
   badges:
     earned a badge: "ទទួល​បាន​ផ្លាកសញ្ញា"
     user badges: "ផ្លាក​សញ្ញា​របស់​ %{user}"
+    earned date: "ទទួល​បាន​ដោយ %{username} %{ago} កន្លង​ទៅ"
+    none me: "លោក​អ្នក​មិន​ទទួល​បាន ផ្លាក់​សញ្ញា​ អី​នៅ​ឡើយ​ទេ"
+    none user: "%{username} មិន​ទាន់​ទទួល​បាន ផ្លាក​សញ្ញា អី​នៅ​ឡើយ​ទេ"
   plans:
+    widget:
+      my plans: "គំរោង​របស់​ខ្ញុំ"
+      start reading: "ចាប់ផ្ដើមអាន"
+    settings: "ការ​កំណត់"
+    privacy:
+      visible to friends?: "តើ​អ្នក​ចង់​អោយ​ សកម្ម​ភាព​របស់​អ្នក ជាមួយ​នឹង​គំរោង​នេះ អោយ​មិត្ត​ភក្តិ​ឃើញ​ទេ?"
+      private: "ឯក​ជន"
+      public: "សាធារណះ"
     title: "គំរោង​អាន​"
     browse by category: "រុក​រក​តាម​ប្រភេទ"
     browse plans: "គំរោង​រុក​រក %{category}"
@@ -453,7 +600,6 @@ km:
     no public plans: "មិន​មាន​គំរោងអាន​ដែលលេច​ឡើយ​ដល់​​ %{username} "
     filter by lang: "គំរោង​បំពេញ​ដោយ​ភាសា"
     plan settings: "ការ​កំណត់​គំរោង"
-    settings: "ការ​កំណត់"
     search: "ស្វែង​រក"
     search placeholder: "ស្វែង​រកគំរោង %{category}"
     subscribe to plan: "ចាប់​ផ្ដើម​គំរោង​នេះ"
@@ -566,17 +712,29 @@ km:
     chapter only: "សូម​ទោស មិន​មាន​ខគម្ពីរ​ជា​សំលេង​ទេ។ សូមមើល​នៅ​ក្នុង​កម្ម​វិធី​អាន​គម្ពីរ​សំរាប់​ខគម្ពីរ​ជា​សំលេង"
     close player menu: "បិទ"
   highlights:
+    title: "គូស​ចំណាំៈ"
+    blank slate:
+      heading: "គូស​លើ​ខគម្ពីរ​ដែល​មានន័យ"
+      description: "ពេល​អាន​ព្រះ​គម្ពីរ ជ្រើស​រើស​យក​ខគម្ពីរ​ហើយ​គួស​ពណ៌វា។ ត្រប់​មក​ទីនេះ ដើម្បី មើល កែសម្រួល ឬ​លុប​កំណត់​ចំណាំ​របស់​អ្នក"
+    none user: "%{username} មិន​មាន​គំនូស​ពណ៌"
     choose color: "ជ្រើស​រើស​ពណ៌"
+    create success: "ជោគ​ជ័យ! គំនូស​ពណ៌​របស់​អ្នក​បាន​រក្សា​ទុក"
+    create failure: "មាន​បញ្ហា​លើ​រក្សា​ទុក​គំនូស​ពណ៌"
+    destroy success: "គំនូស​ពណ៌​បាន​លុប"
+    destroy failure: "មាន​បញ្ហា​ពេល​លុប​គំនូស​ពណ៌"
     creation error: "សូម​ទោស! មិន​អាច​គូស​ចំណាំ​ទេ"
     delete error: "សូម​ទោស មិន​អាចលុប​ការគូស​ចំណាំ​ទេ"
+    form:
+      save button: "រក្សា​ទុក គូស​ចំណាំ"
   searching:
     bible: "ព្រះគម្ពីរ"
-    plans: "គំរោង​អាន"
+    plans: "គំរោង​ច្រើន"
     users: "អ្នក​ប្រើ​ប្រាស់"
     notes: "កំណត់​ត្រា"
     total results: "អំពីរ %{total} លទ្ធ​ផល"
     suggestion html: "តើ​លោក​អ្នក​មានន័យថា %{suggestion_link}?"
     all versions: "ជំនាន់​ %{language_name}ទាំងអស់"
+    results for: "លទ្ធ​ផល​ស្វែង​រកៈ"
   donate:
     donate now: "បរិច្ចាក​ឥឡូវ"
     donate now intl: "ឬបរិច្ចាក​ជាលក្ខណះ​អន្តរជាតិ"
@@ -746,9 +904,6 @@ km:
     public domain: "ដូមេន សាធារណះ"
     loading: "ទាញ​យក​ជំនាន់​ច្រើន​ទៀត"
     load error: "សូម​ទោស មាន​បញ្ហា​ទាញ​យក​ជំនាន់​ច្រើន​ទៀត។ បិទ មីនុយ​នេះ​ហើយ​បើក​សារ​ជា​ថ្មី​ម្ដង​ទៀត។"
-  reader help:
-    title: "ជ្រើសរើសខគម្ពីរ…"
-    line 1: "ចុចលើ​ខគម្ពីរ ឬ ចង្កោមខគម្ពីរណាមួយដើម្បីកំណត់ចំណាំ គូសបន្លិច បង្កើតកំណត់ត្រា ឬ ចែករំលែក ជាមួយ​មិត្តរបស់អ្នក​!"
   campaigns:
     100m:
       logo: "YouVersion: កម្មវិធីព្រះគម្ពីរ"
@@ -778,3 +933,9 @@ km:
       sidebar:
         tagline: "តោះ យើង​បង្កើត​ប្រវត្តិសាស្ត្រ​ជាមួយ​គ្នា។"
         button: "ចែកចាយ​កម្មវិធី​ព្រះ​គម្ពីរ"
+  ui:
+    pagination:
+      next page: "ទំព័រ​បន្ទាប់"
+      previous page: "ទំព័រ​មុន"
+    datetime:
+      just now: "ទើប​តែ​ឥឡូវ​នេះ"
