--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1,5 +1,37 @@
 pl:
   social:
+    intro page:
+      main heading: "Rozmowa i Odkrycia"
+      main description: "Nowy sposób na odkrycie Biblii z zaufanymi przyjaciółmi"
+      moment:
+        user aaron: "Aaron Steele"
+        user andy: "Andrzej Rycerz"
+        timestamp: "5 dni temu"
+        title: "zaznaczono Psalm 31:8"
+        verse: "Raduję się i cieszę Twoim miłosierdziem, Panie, który spojrzałeś na mą niedolę oraz poznałeś utrapienia mojej duszy."
+        reference: "Psalm 31:8"
+        discover:
+          copy: "Odkrywaj i ucz się ze znajomymi, kiedy dodają swoje zakreślenia, zakładki i notatki."
+          button: "Od czego mogę zacząć?"
+        share:
+          copy: "Prowadź uczciwe rozmowy o Piśmie Świętym."
+          button: "Zacznij od szukania znajomych."
+        likes:
+          info: "i 4 innych lubi to"
+        comments:
+          first:
+            text: "Poważnie muszę to dzisiaj usłyszeć, dzięki. Do usłyszenia wkrótce!"
+            time: "około 3 godzin temu"
+          second:
+            text: "Amen, ja też. Wysyłam ci właśnie e-mail."
+            time: "około 27 minut temu"
+          field placeholder: "Napisz komentarz..."
+    widget:
+      timeline: "Oś czasu"
+      no activity yet: "Nie masz jeszcze żadnych aktywności."
+    moment:
+      read all: "Czytaj wszystkie"
+      read less: "Widok skrócony"
     share: "Podziel się"
     my connections: "Połączone konta"
     connected as: "Jesteś podłączony do serwisu %{connection} jako %{username}."
@@ -32,6 +64,9 @@ pl:
     users username not available: "Podana nazwa użytkownika nie jest dostępna."
     users username or password invalid: "Podana nazwa użytkownika lub hasło jest nieprawidłowe."
     users username required: "Musisz wprowadzić login."
+    users first name required: "Musisz wpisać swoje imię."
+    users last name required: "Musisz wpisać nazwisko."
+    moments content required: "Treść nie może być pusta."
   meta:
     kids_app:
       title: "Aplikacja Biblii dla dzieci"
@@ -62,7 +97,7 @@ pl:
   new note: "Utwórz notatkę"
   share success: "Twoja wiadomość została udostępniona."
   share error: "Wystąpił błąd podczas udostępniania twojej wiadomości. Prosimy spróbuj ponownie."
-  google plus: "Google +"
+  google plus: "Google+"
   connect to: "Podłącz się do swojego konta w serwisie %{connection}"
   deleted connection: "Twoje podłączenie z serwisem %{connection} zostało usunięte."
   deleted connection error: "Wystąpił błąd przy próbie usunięcia twojego podłączenia z serwisem %{connection}."
@@ -118,6 +153,7 @@ pl:
   find friends: "Znajdź przyjaciół"
   search placeholder: "Wyszukaj..."
   search: "Szukaj"
+  more: "Więcej"
   book: "Księga"
   filter book: "Filtruj księgi..."
   save: "Zapisz"
@@ -131,17 +167,14 @@ pl:
   chapter: "Rozdział"
   bible: "Biblia"
   notes title: "Notatki"
-  friends: "Przyjaciele"
   groups: "Grupy"
   mobile: "Mobilne"
   live: "Na żywo/Grupy"
   first page: "Pierwsza strona"
   last page: "Ostatnia strona"
-  next page: "Następna strona"
-  previous page: "Poprzednia strona"
   invalid username or password: "Nieprawidłowa nazwa lub hasło."
   show all bookmarks: "Pokaż wszystkie %{total} zakładki"
-  show all notes: "Pokaż wszystkie %{total} notatki"
+  show all notes: "Wszystkie notatki"
   recent bookmarks: "Ostatnie zakładki"
   percentage display: "%{number}%"
   myself: "Ja"
@@ -152,7 +185,115 @@ pl:
   or:
     lower: "lub"
     upper: "LUB"
+  moments:
+    vod:
+      title: "Werset dnia"
+    friendship:
+      now friends: "Jesteś teraz znajomym"
+    cta:
+      profile update text: "Pomóż znajomym cię odnaleźć."
+      profile update button: "Uaktualnij swój profil"
+      sharing text: "Udostępnij wersety w portalach"
+      sharing button: "Włącz udostępnianie"
+      friends text: "Zobacz momenty swoich znajomych w Biblii."
+      friends button: "Znajdź znajomych"
+    action:
+      go to scripture: "Przejdź do Pisma"
+      load more: "Załaduj więcej"
+      like: "Lubię to"
+      liked: "Lubisz"
+      like title: "Lubię to"
+      last comment: "Ostatni komentarz"
+      share: "Podziel się"
+      share title: "Podziel się wersetem ze znajomymi lub rodziną"
+      comment: "Komentarz"
+      comment title: "Zobacz wszystkie komentarze"
+      edit: "Edytuj"
+      edit highlight title: "Edytuj to zakreślenie"
+      edit bookmark title: "Edytuj tę zakładkę"
+      edit note title: "Edytuj tę notatkę"
+      delete: "Usuń"
+      delete confirm: "Czy jesteś pewien?"
+      delete highlight title: "Usuń to zakreślenie"
+      delete bookmark title: "Usuń tą zakładkę"
+      delete note title: "Usuń tę notatkę"
+  notifications:
+    title: "Powiadomienia"
+    none: "Nie masz żadnych powiadomień"
+    no new: "Brak nowych powiadomień"
+    view all: "Zobacz wszystkie powiadomienia"
+  likes:
+    create success: "Twoje polubienie zostało zapisane!"
+    create failure: "Polubienie nie zostało zapisane"
+    destroy success: "Usunięto polubienie"
+    destroy failure: "Polubienie nie zostało usunięte"
+  comments:
+    view all N: "Zobacz wszystkie %{count} komentarze"
+    post comment: "Opublikuj komentarz"
+    create success: "Twój komentarz został opublikowany!"
+    create failure: "Komentarz nie mógł być opublikowany"
+    destroy success: "Usunięto komentarz"
+    destroy failure: "Nie usunięto komentarza"
+    form:
+      save button: "Opublikuj"
+  friends:
+    you have N friends: "Masz %{count} znajomych"
+    none me: "Podziel się swoimi ważnymi chwilami w Biblii, takimi jak zakładki, zakreślenia i notatki, ze znajomymi i rodziną."
+    find friends: "Znajdź znajomych"
+    blank slate:
+      heading: "Jeszcze nie znajomi"
+      description: "Musisz być znajomym tej osoby, aby widzieć jej znajomych."
+    limit notice: "Możesz mieć nawet 150 znajomych"
+    limit description: "Ograniczając swoją znajomość w Aplikacji Biblii do osób, które dobrze znasz, tworzysz w ten sposób warunki do uczciwej rozmowy i dzielenia się swoimi odkryciami."
+  friendships:
+    find friends title: "Znajdź znajomych"
+    search by name: "Szukaj wg nazwy"
+    search button: "Idź"
+    widget:
+      find friends title: "Znajdź znajomych"
+      search by name: "Szukaj wg nazwy"
+      search button: "Idź"
+    offer success: "Wysłano zaproszenie"
+    offer failure: "Błąd, nie wysłano zaproszenia"
+    create success: "Jesteście teraz znajomymi!"
+    create failure: "Błąd, nie utworzono znajomości"
+    destroy success: "Zaproszenie odrzucone"
+    destroy failure: "Błąd, nie odrzucono zaproszenia"
+    requests title: "Zaproszenia znajomych"
+    requests view all: "Zobacz wszystkie zaproszenia"
+    requests none: "Nie masz żadnych zaproszeń"
+    requests no new: "Brak nowych zaproszeń"
+    status:
+      pending: "Zaproszenie oczekuje"
+      friends: "Przyjaciele"
+    user wants friendship: "%{user} chce być twoim znajomym"
+    user wants friendship partial: "chce być twoim znajomym"
+    form:
+      remove friend button: "Usuń znajomego"
+      remove friend button title: "Usuń tę osobę ze swojej listy znajomych"
+      add friend button: "Dodaj znajomego"
+      add friend button title: "Wyślij %{user} zaproszenie do znajomych"
+      accept button: "Zaakceptuj"
+      accept request button: "Zaakceptuj zaproszenie"
+      ignore button: "Ignoruj"
+      ignore request button: "Ignoruj zaproszenie"
   notes:
+    none user: "%{username} nie ma jeszcze żadnych notatek."
+    blank slate:
+      heading: "Nie masz jeszcze notatek."
+      description: "Podczas czytania Biblii, gdy poczujesz, że Bóg przemawia do Ciebie cichym, delikatnym głosem, możesz szybko dodać te myśli tutaj. Twoje notatki będą oznaczone jako <em>prywatne</em>. Jeżeli chciałbyś się nimi podzielić z przyjaciółmi, wystarczy, że otworzysz je i ustawisz jako <em>publiczne</em>."
+    form:
+      title field: "Tytuł:"
+      content field: "Treść:"
+      highlight field: "Zaznaczenie: (opcjonalne)"
+      reference field: "Odniesienia:"
+      status field: "Stan:"
+      save button: "Zapisz"
+    status:
+      private: "Prywatne"
+      public: "Publiczne"
+      friends: "Tylko znajomi"
+      draft: "Szkic"
     list title: "Notatki"
     loading community: "Ładowanie notatek społeczności..."
     no community notes: "Nie znaleziono notatek odnoszących się do wybranych wersetów. Aby utworzyć notatkę, wybierz werset w czytniku Biblii i kliknij przycisk Wybrane u góry czytnika."
@@ -160,6 +301,7 @@ pl:
     private: "Prywatne"
     is private: "Wybrana notatka jest prywatna."
     draft: "Szkic"
+    friends: "Przyjaciele"
     creation form errors: "Poniższe błędy uniemożliwiły utworzenie twojej notatki:"
     reference field: "Odniesienia:"
     version field: "Wersja:"
@@ -180,7 +322,10 @@ pl:
     cancel: "Zrezygnuj"
     pop out: "Wydziel"
     none found: "Nie znaleziono notatek..."
-    successfully deleted: "Notatka usunięta"
+    create success: "Twoja notatka została zapisana!"
+    create failure: "Błąd, nie zapisano notatki"
+    destroy success: "Notatka usunięta."
+    destroy failure: "Błąd, nie usunięto notatki"
   ref:
     loading secondary: "Ładowanie odniesienia w drugim przekładzie..."
     clear verses: "Wyczyść zaznaczenie wersetów"
@@ -211,6 +356,8 @@ pl:
     profile form errors: "Poniższe błędy uniemożliwiły aktualizację twojego profilu:"
     email address: "Adres e-mail"
     user name: "Nazwa użytkownika"
+    first name: "Imię"
+    last name: "Nazwisko"
     agreement: "Zgadzam się z %{terms_link} YouVersion."
     terms and conditions: "Warunki użytkowania"
     facebook sign up success: "Doskonale! Dokonałeś autoryzacji przez Facebooka. By kontynuować, wybierz nazwę użytkownika YouVersion i hasło."
@@ -228,6 +375,7 @@ pl:
     my profile: "Mój profil"
     edit profile: "Edytuj profil"
     update profile: "Uaktualnij profil"
+    go to your profile: "Przejdź do profilu"
     other user profile: "Profil użytkownika %{username}"
     my password: "Zmień moje hasło"
     edit password: "Zmień hasło"
@@ -240,6 +388,7 @@ pl:
     edit account_existence: "Usuń konto"
     delete account button: "Usuń moje Konto YouVersion"
     no devices: "Nie masz urządzeń podłączonych do konta YouVersion"
+    no devices download copy: "Aplikacja Biblii jest darmową mobilną Biblią, bazującą na Biblii on-line YouVersion, którą można zainstalować na niemal każdym urządzeniu. Aplikacja Biblii pozwala użytkownikom na czytanie Biblii, dzielenie się wersetami, zaznaczanie ulubionych fragmentów i korzystanie z innych funkcji&mdash;wszystko to w formie przyjaznej dla mobilnego trybu życia. Odwiedź <a href='https://www.bible.com/app'>bible.com/app</a> ze swojego urządzenia, aby pobrać Aplikację Biblii i połączyć swoje konto!"
     yes delete: "Tak, usuń moje konto"
     account delete success: "Twoje konto YouVersion zostało usunięte. Mamy nadzieję, że będzie nadal znajdował sposoby, aby studiować Biblię. Niektóre z tych aplikacji mogą być Ci pomocne:  <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Jeżeli usuniesz swoje konto, utracisz bezpowrotnie wszystkie swoje informacje , historię i personalizację (notatki, zakładki, zakreślenia itp.) na YouVersion.com i w Aplikacji Biblii. Czynność ta nie może zostać cofnięta ani przez Ciebie, ani przez nasz zespół. Jeżeli jesteś pewny, że chcesz kontynuować, postępuj wg instrukcji niżej."
@@ -253,6 +402,7 @@ pl:
     my badges: "Moje odznaczenia"
     revised date: "Ostatnia wersja %{date}"
     update email copy: "Wprowadź nowy adres e-mail i kliknij Uaktualnij e-mail. Wyślemy ci odnośnik do potwierdzenia nowego adresu e-mail."
+    edit email: "Zmień adres e-mail"
     update email check: "Prosimy sprawdź swoją skrzynkę i kliknij odnośnik potwierdzenia twojego nowego adresu."
     confirm update email success: "Dziękujemy! Uaktualniłeś swój adres e-mail."
     confirm update email error: "Niestety, pojawił się problem przy zmianie twojego adresu e-mail."
@@ -353,6 +503,16 @@ pl:
       general title: "Informacje ogólne"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "Idź dalej, nie ma tu (jeszcze) nic do zobaczenia"
+        description: "Rozpocznij czytanie Biblii lub zaangażuj znajomego a ta strona będzie pokazywać historię waszej aktywności. "
+      visit friend: "Odwiedź profil %{friend}"
+      tab activity: "Aktywność"
+      tab friends: "Przyjaciele"
+      tab notes: "Notatki"
+      tab bookmarks: "Zakładki"
+      tab highlights: "Zaznaczenia"
+      tab badges: "Odznaczenia"
       first name: "Imię"
       last name: "Nazwisko"
       email: "Adres e-mail"
@@ -392,6 +552,10 @@ pl:
       reading_plans: "Powiadamiaj mnie o informacjach dotyczących planów czytania, które rozpocząłem."
       publishing partners: "Informuj mnie o nowościach na stronach partnerów YouVersion."
       update: "Powiadomienia o akutalizacji"
+      friendships: "Powiadamiaj mnie o zaproszeniach"
+      moments: "Powiadamiaj mnie o aktywności znajomych"
+      comments: "Powiadamiaj mnie o komentzarzach do mojej aktywności"
+      likes: "Powiadamiaj mnie o polubieniach mojej aktywności"
   bookmarks:
     new: "Nowa zakładka"
     edit: "Edytuj"
@@ -402,12 +566,14 @@ pl:
     all: "Wszystkie"
     labels label: "Etykiety:"
     title: "Zakładki"
+    my labels: "Moje etykiety"
     not found: "Korzystanie z zakładek ułatwi ci znalezienie ulubionych fragmentów, lub wersetu, który ostatnio czytałeś w określonej księdze. Aby dodać zakładkę, wybierz werset w czytniku Biblii, a następnie kliknij przycisk Wybrane na górze czytnika."
     other user not found: "%{username} nie zachował jeszcze żadnych zakładek."
     creation form errors: "Poniższe błędy nie pozwoliły na utworzenie zakładki:"
-    successfully created: "Zakładka dodana"
-    successfully deleted: "Zakładka usunięta"
-    successfully updated: "Zakładka zaktualizowana"
+    create success: "Twoja zakładka została zapisana!"
+    destroy success: "Usunięto zakładkę"
+    destroy failure: "Błąd, nie usunięto zakładki"
+    update success: "Uaktualniono zakładkę"
     labels placeholder: "Oddziel kolejne etykiety przecinkami."
     save: "Zapisz zakładkę"
     confirm delete: "Tak, na pewno."
@@ -418,10 +584,36 @@ pl:
     update: "Uaktualnij"
     color: "Kolor:"
     version field: "Przekład:"
+    none user: "%{username} nie ma zakładek"
+    blank slate:
+      heading: "Zaznacz ważne wersety"
+      description: "Podczas czytania Biblii, wybierz werset i zaznacz go. Powróć tu, aby przeglądać, edytować lub usunąć swoją zakładkę."
+    form:
+      title field: "Tytuł:"
+      reference field: "Odniesienia:"
+      labels field: "Etykiety (oddzielaj przecinkami):"
+      highlight field: "Zaznaczenie: (opcjonalne)"
+      colors field: "Kolor:"
+      update button: "Uaktualnij zakładkę"
+      save button: "Zapisz zakładkę"
   badges:
     earned a badge: "Otrzymałeś odznaczenie"
     user badges: "Odznaczenia użytkownika %{user}"
+    earned date: "Zdobyte przez %{username} %{ago} temu"
+    none me: "Nie zdobyłeś jeszcze żadnych odznaczeń."
+    none user: "%{username} nie zdobył jeszcze żadnych odznaczeń."
   plans:
+    widget:
+      my plans: "Moje plany"
+      start reading: "Rozpocznij czytanie"
+      view my plans: "Pokaż moje plany"
+      featured plans: "Wyszczególnione plany"
+      view all plans: "Pokaż wszystkie plany"
+    settings: "Ustawienia"
+    privacy:
+      visible to friends?: "Czy chcesz, aby twoja aktywność w tym planie była widoczna dla znajomych?"
+      private: "Prywatne"
+      public: "Publiczne"
     title: "Plany czytania"
     browse by category: "Przeglądaj według kategorii"
     browse plans: "Przeglądaj plany w kategorii %{category}"
@@ -452,7 +644,6 @@ pl:
     no public plans: "Brak widocznych planów dla użytkownika %{username}."
     filter by lang: "Filtruj plany wg języka"
     plan settings: "Ustawienia planu"
-    settings: "Ustawienia"
     search: "Szukaj"
     search placeholder: "Przeszukaj plany w kategorii %{category}"
     subscribe to plan: "Rozpocznij ten plan"
@@ -564,18 +755,31 @@ pl:
     none: "Brak wersji audio dla tego przekładu"
     chapter only: "Wersja audio nie jest dostępna dla tych wersetów. Sprawdź rozdziały audio w czytniku."
     close player menu: "Zamknij"
+    publisher website: "Witryna internetowa wydawcy"
   highlights:
+    title: "Zaznaczenia"
+    blank slate:
+      heading: "Zakreśl ważne wersety"
+      description: "Podczas czytania Biblii, wybierz werset i zakreśl go. Powróć tu, aby przeglądać, edytować lub usunąć swoje zakreślenie."
+    none user: "%{username} nie ma zakreśleń"
     choose color: "Wybierz kolor"
+    create success: "Twoje zakreślenie zostało zapisane!"
+    create failure: "Błąd, nie zapisano zakreślenia"
+    destroy success: "Zaznaczenie usunięte"
+    destroy failure: "Błąd, nie usunięto zakreślenia"
     creation error: "Niestety, nie można było zakreślić."
     delete error: "Niestety, nie można było usunąć zakreślenia."
+    form:
+      save button: "Zapisz zakreślenie"
   searching:
     bible: "Biblia"
-    plans: "Plany czytania"
+    plans: "Plany"
     users: "Użytkownicy"
     notes: "Notatki"
     total results: "Około %{total} wyników"
     suggestion html: "Czy chodziło ci o %{suggestion_link}?"
     all versions: "Wszystkie przekłady języka: %{language_name}"
+    results for: "Wyniki wyszukiwania dla:"
   donate:
     donate now: "Przekaż dotację teraz"
     donate now intl: "lub dotuj z zagranicy"
@@ -745,9 +949,6 @@ pl:
     public domain: "Domena publiczna"
     loading: "Ładowanie kolejnych przekładów..."
     load error: "Pojawił się problem z ładowaniem przekładów. Zamknij to menu i otwórz ponownie, aby spróbować jeszcze raz."
-  reader help:
-    title: "Wybierz werset..."
-    line 1: "Kliknij lub naciśnij na dowolny werset lub ich zbiór, aby dodać zakładkę, podkreślenie, utworzyć notatkę lub podzielić się ze znajomymi!"
   campaigns:
     100m:
       logo: "YouVersion: Aplikacja Biblii"
@@ -777,3 +978,9 @@ pl:
       sidebar:
         tagline: "Twórzmy razem historię"
         button: "Udostępnij Aplikację Biblii"
+  ui:
+    pagination:
+      next page: "Następna strona"
+      previous page: "Poprzednia strona"
+    datetime:
+      just now: "właśnie teraz"
