--- a/config/locales/sw.yml
+++ b/config/locales/sw.yml
@@ -1,5 +1,37 @@
 sw:
   social:
+    intro page:
+      main heading: "Mazungumzo & Ungunduzi"
+      main description: "Njia mpya ya kuchunguza Biblia na marafiki unaowaamini"
+      moment:
+        user aaron: "Haruni Chuna"
+        user andy: "Andi Askari"
+        timestamp: "siku 5 zilizopita"
+        title: "Zaburi 31:7 imealamishwa"
+        verse: "Na nishangilie, nizifurahie fadhili zako, Kwa kuwa umeyaona mateso yangu. Umeijua nafsi yangu taabuni."
+        reference: "Zaburi 31:7"
+        discover:
+          copy: "Zindua na jifunze na marafiki zako wakiwa wanaongeza maalamisho, maonyesho, na maelezo."
+          button: "Nitaanza wapi?"
+        share:
+          copy: "Shirikisha mazungumzo ya uaminifu kuhusu maandiko."
+          button: "Anza kwa kutafuta marafiki."
+        likes:
+          info: "na 4 zaidi wameipenda hii"
+        comments:
+          first:
+            text: "Kweli nilihitaji kusikia hili leo, asante. Tuongee hivi karibuni!"
+            time: "Kama masaa 3 yaliyopita"
+          second:
+            text: "Amina, mimi pia. Nakutumia barua pepe yangu sasa hivi."
+            time: "kama dakika 27 zilizopita"
+          field placeholder: "Andika maoni..."
+    widget:
+      timeline: "Ratiba"
+      no activity yet: "Hakuna shughuli yeyote."
+    moment:
+      read all: "Soma yote"
+      read less: "Soma kidogo"
     share: "husisha wengine/jumuisha"
     my connections: "akaunti zilizounganishwa"
     connected as: "Umeunganishwa na %{uhusiano} kama%{jina la mtumiaji}"
@@ -32,6 +64,9 @@ sw:
     users username not available: "Jina la matumizi uliyopeana inatumiwa kwingine "
     users username or password invalid: "Jina la matumizi na neno la siri uliyopeana si sawa "
     users username required: "Lazima uweke jina la matumizi "
+    users first name required: "Lazima uingize jina la kwanza."
+    users last name required: "Lazima uingize jina la mwisho."
+    moments content required: "Maudhui haiwezi kuachwa tupu"
   meta:
     kids_app:
       title: "Apu ya Biblia kwa ajili ya watoto"
@@ -62,7 +97,7 @@ sw:
   new note: "noti mpya"
   share success: "Ujumbe wako umesambazwa."
   share error: "Samahani, kulikuwa na hitilafu katika usambazaji wa ujumbe wako. Tafadhali jaribu tena."
-  google plus: "Google +"
+  google plus: "Google+"
   connect to: "Ungana na akaunti yako ya %{connection}"
   deleted connection: "Umefanikiwa kuondoa uhusiano wako na %{connection}."
   deleted connection error: "Samahani, kulikuwa na hitilafu kuondoa uhusiano wako na %{connection}."
@@ -118,6 +153,7 @@ sw:
   find friends: "tafuta marafiki"
   search placeholder: "tafuta...."
   search: "tafuta"
+  more: "Zaidi"
   book: "kitabu"
   filter book: "chuja vitabu"
   save: "okoa/kuokoa"
@@ -131,17 +167,14 @@ sw:
   chapter: "Sura"
   bible: "Bibilia"
   notes title: "maelezo"
-  friends: "Marafiki"
   groups: "makundi"
   mobile: "rununu"
   live: "Maisha/Makundi"
   first page: "Kurasa ya kwanza"
   last page: "Kurasa ya mwisho"
-  next page: "Kurasa inayofuata"
-  previous page: "Kurasa iliyopita"
   invalid username or password: "jina la mtumiaji au kitambulisho cha siri ni batili"
   show all bookmarks: "Onyesha zote %{total} alamishwa"
-  show all notes: "Onyesha zote %{total} maelezo"
+  show all notes: "Onyesha maelezo yote"
   recent bookmarks: "maalamisho ya hivi karibuni"
   percentage display: "%{number}%"
   myself: "mimi"
@@ -152,7 +185,115 @@ sw:
   or:
     lower: "au"
     upper: "AU"
+  moments:
+    vod:
+      title: "Fungu la siku"
+    friendship:
+      now friends: "Wewe sasa ni marafiki na"
+    cta:
+      profile update text: "Saidia marafiki zako kukupata"
+      profile update button: "wezesha profaili yako"
+      sharing text: "Shirikisha mafungu na mitandao ya kijamii"
+      sharing button: "wezesha kushirikiana"
+      friends text: "Angalia mambo yanayomjiri rafiki yako katika Biblia."
+      friends button: "Tafuta marafiki"
+    action:
+      go to scripture: "Nenda kwenye maandiko"
+      load more: "ongeza zaidi"
+      like: "penda"
+      liked: "Imependwa"
+      like title: "penda hii"
+      last comment: "Oni la mwisho"
+      share: "husisha wengine/jumuisha"
+      share title: "shirikisha hiki kwa marafiki au familia"
+      comment: "maoni"
+      comment title: "angalia maoni yote"
+      edit: "Hariri"
+      edit highlight title: "Hariri onyesho hili"
+      edit bookmark title: "Hariri alamisho hili"
+      edit note title: "Hariri elezo hili"
+      delete: "Ondoa"
+      delete confirm: "Unahuakika?"
+      delete highlight title: "Futa onyesho hili"
+      delete bookmark title: "Futa alamamisho hili"
+      delete note title: "futa elezo hili"
+  notifications:
+    title: "Taarifa"
+    none: "Huna taarifa yoyote"
+    no new: "Hakuna taarifa mpya"
+    view all: "Onyesha taarifa zote"
+  likes:
+    create success: "Umefanikiwa! kupenda kwako kumehifadhiwa"
+    create failure: "kupenda kwako haikuweza kuhifadhiwa "
+    destroy success: "kupenda kwako kumefutwa"
+    destroy failure: "kupenda kwako hakukuweza kufutwa"
+  comments:
+    view all N: "Ona zote%{count} maoni"
+    post comment: "Andika maoni"
+    create success: "Umefanikiwa! Maoni yako yametumwa."
+    create failure: "Maoni haya kuweza kutumwa"
+    destroy success: "Oni lako limefutwa"
+    destroy failure: "Oni lako halikuweza kufutwa"
+    form:
+      save button: "Tuma"
+  friends:
+    you have N friends: "unamarafiki %{count}"
+    none me: "Shirikisha wakati wako katika Biblia kama vile maalamisho, mambo muhimu, na maelezo kwa marafiki zako wa karibu na familia."
+    find friends: "Tafuta marafiki"
+    blank slate:
+      heading: "Kwa sasa sio marafiki"
+      description: "Lazima uwe rafiki na mtu huyu ili kuona marafiki zao."
+    limit notice: "Unaweza kawa na marafiki wengi kama 150"
+    limit description: "Kuwa na kiwango cha marafiki kwenye Apu ya Biblia kwa watu unaowajua vizuri inajenga mazingira yenye mazungumzo waaminifu na uvumbuzi pamoja na marafiki unaowaamini."
+  friendships:
+    find friends title: "Tafuta marafiki"
+    search by name: "Tafuta kwa jina"
+    search button: "Nenda"
+    widget:
+      find friends title: "Tafuta marafiki"
+      search by name: "Tafuta kwa jina"
+      search button: "Nenda"
+    offer success: "Ombi la urafiki limetumwa"
+    offer failure: "Hitilafu wakati wa kutuma ombi la urafiki"
+    create success: "Umefanikiwa! Sasa ni marafiki."
+    create failure: "Hitilafu kujenga urafiki"
+    destroy success: "Ombi limekataliwa"
+    destroy failure: "Hitilafu kukanusha urafiki"
+    requests title: "Maombi ya urafiki"
+    requests view all: "Onyesha maombi yote ya urafiki"
+    requests none: "Huna ombi lolote la urafiki"
+    requests no new: "Hana maombi mapya"
+    status:
+      pending: "Ombi linasubiri jibu"
+      friends: "Marafiki"
+    user wants friendship: "%{user} anataka kuwa rafiki yako"
+    user wants friendship partial: "anataka kuwa rafiki yako"
+    form:
+      remove friend button: "Ondoa rafiki"
+      remove friend button title: "Muondoe huyu mtu kwenye orodha yangu ya marafiki"
+      add friend button: "Ongeza rafiki"
+      add friend button title: "Tuma %{user} ombi la urafiki"
+      accept button: "Kubali"
+      accept request button: "Kubali ombi"
+      ignore button: "Puuzia"
+      ignore request button: "Puuzia ombi"
   notes:
+    none user: "%{username} hana maelezo yoyote."
+    blank slate:
+      heading: "Huna maelezo yoyote"
+      description: "Unaposoma Biblia, wakati unaposikia sauti ndogo , ya Mungu akizungumza unaweza kwa haraka kuongeza mawazo hayo hapa. Maelezo yako yata alamamishwa kama <em> binafsi </ em> na default. Kama ukipenda kushirikisha maelezo yako kwa marafiki zako,  kufungua na badili kwa <em> jamii </ em>."
+    form:
+      title field: "kichwa cha habari:"
+      content field: "maudhui:"
+      highlight field: "Maonyesho: (sio lazima)"
+      reference field: "kumbukumbu"
+      status field: "Hali:"
+      save button: "hifadhi/okoa"
+    status:
+      private: "Binafsi"
+      public: "Umma"
+      friends: "Marafiki pekee"
+      draft: "Rasimu"
     list title: "maelezo"
     loading community: "Inafungua dondoo zako za jumuia"
     no community notes: "Hakuna vidokezo vya jamii zilizorejea mistari ulizochagua. Kutengeneza dokezo , chagua mstari katika Biblia  na kisha bonyeza kitufe kilicho juu."
@@ -160,6 +301,7 @@ sw:
     private: "Binafsi"
     is private: "Dondoo iliyoombwa ni ya kibinafsi."
     draft: "Rasimu"
+    friends: "Marafiki"
     creation form errors: "kosa/makosa yafuatayo yamezuia utengenezaji wa maelezo:"
     reference field: "kumbukumbu"
     version field: "toleo:"
@@ -180,7 +322,10 @@ sw:
     cancel: "Ondoa"
     pop out: "toa nje"
     none found: "Hakuna dondoo zilizopatikana"
-    successfully deleted: "dondoo ilitolewa"
+    create success: "Umefanikiwa! Oni lako limehifadhiwa."
+    create failure: "Hitilafu katika utunzaji wa elezo"
+    destroy success: "Elezo limeondolewa"
+    destroy failure: "Hitilafu kuondoa elezo"
   ref:
     loading secondary: " Marejeo yanatolewa katika Toleo Sekondari ..."
     clear verses: "Ondoa mistari iliyochaguliwa"
@@ -211,6 +356,8 @@ sw:
     profile form errors: "kosa/makosa yafuatayo yamezuia uwezeshaji wa utambulisho wako:"
     email address: "barua pepe"
     user name: "jina la mtumiaji"
+    first name: "Jina la kwanza"
+    last name: "Jina la mwisho"
     agreement: "Nakubaliana na YouVersion %{terms_link}."
     terms and conditions: "masharti na sheria"
     facebook sign up success: "Vizuri! umeidhinishwa na facebook. chagua jina la mtumiaji na kitambulisho cha siri ili kuendelea."
@@ -228,6 +375,7 @@ sw:
     my profile: "profaili yangu"
     edit profile: "hariri profaili"
     update profile: "wezesha profaili"
+    go to your profile: "Nenda kwenye profaili yako"
     other user profile: "%{username}'s profaili"
     my password: "Badili kitambulisho cha siri"
     edit password: "Badilisha kitambulisho cha siri"
@@ -240,7 +388,7 @@ sw:
     edit account_existence: "Futa akaunti"
     delete account button: "Futa akaunti yangu ya YouVersion"
     no devices: "Hakuna kifaa chenye uhusiano na akauti yako ya YouVersion."
-    no devices download copy: "Kulingana na Biblia iliyo kwenye mtandao, YouVersion.com, App ya Biblia ni bure kwenye simu Biblia inayoweza kuwa imewekwa kwenye kifaa karibu yoyote ya simu. App ya Biblia inaruhusu watumiaji kusoma Biblia ,kueneza mistari  kwenye mitandao yao ya kijamii, kuweka alama kwenye  vifungu wanavyopenda, yote kwenye njia inayoendanisha  na mitindo ya rununu zao. Tembelea  <a href='https://www.bible.com/download'>bible.com/download</a>kutoka simu yako ya kifaa kupakua App ya Biblia na kuunganisha akaunti yako!"
+    no devices download copy: "Kulingana na Biblia ya hewani, YouVersion, App ya Biblia ni Biblia ya bure ya simu ambayo inaweza kuwekwa kwenye simu ya mkononi karibu yoyote. Apu ya Biblia inaruhusu watumiaji kusoma Biblia,  kushiriki mafungu na mitandao yao ya kijamii, kualamamisha mafungu uyapendao, na zaidi-yote katika mfumo unaoendena na ongezeko wa utumiaji wa simu za mkononi. Ziara ya <a href='https://www.bible.com/app'> bible.com / programu </ a> kutoka kwa kifaa yako ya simu kushusha App Biblia na kuungana akaunti yako!"
     yes delete: "Ndio, Futa akaunti yangu"
     account delete success: "Akaunti yako ya YouVersion imetolewa. Tunatumaini kuwa utaendelea kutafuta njia ya maana kujijulisha mambo ya bibilia. Vitumizi hivi vinaweza kukusaidia unaposonga mbele:<a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Ukifuta akaunti yako utatapoteza habari zako,historia yako, na ubinafsishaji (kama vile maelezo, maalamisho, mambo muhimu, nk) zilizondani ya YouVersion.com na apu ya Bibilia. Tendo hili haliwezi kurekebishwa na wewe au mtu wa timu yako. Ikiwa unauhakika ungependa kuendelea endelea hapa chini"
@@ -254,7 +402,7 @@ sw:
     my badges: "Beji zangu"
     revised date: "Ilirekebishwa mwisho %{date}"
     update email copy: "Adika barua pepe mpya kisha ubonyeze sahihisha barua pepe. Tutakutumia tuvuti ili udhibitishe barua pepe yako mpya."
-    edit email: "Wezesha anuani ya barua pepe"
+    edit email: "Badilisha barua pepe"
     update email check: "Tafadhali angalia batua pepe yako kisha ufuate tuvuti ili uthibitishe barua pepe yako mpya"
     confirm update email success: "Asante! Umebadilisha barua pepe yako"
     confirm update email error: "Samahani, kosa lilitokea tulipojaribu kumaliza kubadilisha barua pepe yako."
@@ -355,6 +503,16 @@ sw:
       general title: "habari kwa ujumla"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "Endelea kwenda, hakuna chochote cha kuona hapa (bado)"
+        description: "Anza kujihusisha na Biblia, au marafiki zako, na ukurasa huu utaonyesha historia ya kinachoendelea."
+      visit friend: "Tembelea profaili ya ma %{friend}"
+      tab activity: "Shughuli"
+      tab friends: "Marafiki"
+      tab notes: "maelezo"
+      tab bookmarks: "Malamisho"
+      tab highlights: "Mambo muhimu:"
+      tab badges: "Nishani"
       first name: "jina la kwanza"
       last name: "jina la mwisho"
       email: "barua pepe"
@@ -394,6 +552,10 @@ sw:
       reading_plans: "nijulishe kuhusu taarifa ya mpango wangu wa usomaji nilioanza."
       publishing partners: "Nipe ujumbe kutoka kwa washirika wa YouVersion"
       update: "Wezesha taarifa."
+      friendships: "Nijulishe kuhusu maombi ya urafiki"
+      moments: "Nijulishe kuhusu shughuli za marafiki"
+      comments: "Nijulishe kuhusu maoni juu ya shughuli zangu"
+      likes: "Nijulishe juu ya shughuli zangu zilizopendwa"
   bookmarks:
     new: " Alamisho mpya"
     edit: "Hariri"
@@ -404,12 +566,14 @@ sw:
     all: "zote"
     labels label: "Maandiko:"
     title: "Alama"
+    my labels: "Lebo zangu"
     not found: "Alama kukupa mwongonzo wa haraka wa kurejea kwa vifungu vyako unavyopenda au sura ya mwisho uliyosoma katika kitabu maalum. Kuongeza alama, chagua mstari katika Biblia na kisha bofya batani iliyochaguliwa juu ya kifaa cha kusomea."
     other user not found: "%{username} bado hajahifadhi alama zozote."
     creation form errors: "Makosa  yafuatayo(s) yalikuzuia kutengeneza alama"
-    successfully created: "alama imeongezwa"
-    successfully deleted: "alama imetolewa"
-    successfully updated: "alama Imesharekibishwa"
+    create success: "Umefanikiwa! Onyesho lako limehifadhiwa."
+    destroy success: "Alama imetolewa"
+    destroy failure: "Hitilafu katika kuondoa alama"
+    update success: "Alamamisho limekuwa updated"
     labels placeholder: "Gawa maandiko tofauti na alama za mkato."
     save: "Hifadhi alama"
     confirm delete: "Ndio, ninahuakika"
@@ -420,10 +584,36 @@ sw:
     update: "Wezesha"
     color: "Rangi:"
     version field: "Toleo:"
+    none user: "%{username} hana maalamisho"
+    blank slate:
+      heading: "Alamamisha mafungu yenye maana"
+      description: "Wakati wa kusoma Biblia, kuchagua fungu na lialamishe. Rudi hapa kuona, hariri, au kufuta alama yako."
+    form:
+      title field: "kichwa cha habari:"
+      reference field: "rejea"
+      labels field: "Lebo(koma_tenganisha):"
+      highlight field: "Maonyesho: (sio lazima)"
+      colors field: "Rangi:"
+      update button: "Alamisha upya"
+      save button: "Hifadhi alama"
   badges:
     earned a badge: "beji ulizopata"
     user badges: "%{user} beji"
+    earned date: "Zimepatwa na %{username} %{ago} mda uliyopita"
+    none me: "Haujapata beji zozote."
+    none user: "%{username} hajapata beji zozote."
   plans:
+    widget:
+      my plans: "mipango yangu"
+      start reading: "Anza kusoma"
+      view my plans: "Angalia Mipango Yango"
+      featured plans: "Vipengele vya Mipango"
+      view all plans: "Angalia Mipango Yote"
+    settings: "mipangilio"
+    privacy:
+      visible to friends?: "Ungependa shughuli yako wa  mpango huu wa kuonekana na marafiki wako?"
+      private: "Binafsi"
+      public: "Umma"
     title: "Mipango ya usomaji"
     browse by category: "Tafuta kwa Jamii"
     browse plans: "Vingari %{category} mipango"
@@ -454,7 +644,6 @@ sw:
     no public plans: "Hakuna mipango ya kusoma ya %{username}  yanayoweza kuonekana"
     filter by lang: "Chagua mipango kulingana na lugha"
     plan settings: "mazingira ya mipangilio"
-    settings: "mipangilio"
     search: "tafuta"
     search placeholder: "Tafuta %{category} mipango"
     subscribe to plan: "anza mpango huu"
@@ -567,17 +756,29 @@ sw:
     chapter only: "Samahani, sauti haipo kwenye mistari hii. Soma kwa msomo ili upate sauti ya mlango."
     close player menu: "funga"
   highlights:
+    title: "Mambo muhimu:"
+    blank slate:
+      heading: "Onyesha mafungu yenye maana"
+      description: "Wakati wa kusoma Biblia, kuchagua fungu na lionyeshe kwa rangi. Rudi hapa kuona, hariri, au kufuta onyesha lako."
+    none user: "%{username} hana maonyesho"
     choose color: "Chagua rangi"
+    create success: "Umefanikiwa! Alamisho lako limehifadhiwa"
+    create failure: "Hitilafu katika kutunza onyesho"
+    destroy success: "Onyesho limefutwa"
+    destroy failure: "Hitilafu katika kufuta onyesho"
     creation error: "Samahani, haikuwezekana kubainisha maandishi hayo."
     delete error: "Samahani, haikuwezekana kuondoa ubainisho huo"
+    form:
+      save button: "Hifadhi mambo muhimu"
   searching:
     bible: "biblia"
-    plans: "Mipango ya usomaji"
+    plans: "Mipango"
     users: "watumiaji"
     notes: "maelezo"
     total results: "Kuhusu %{total} matokeo"
     suggestion html: "Ulimaanisha %{suggestion_link}?"
     all versions: "Yote %{language_name} matoleo"
+    results for: "Tafuta matokeo ya:"
   donate:
     donate now: "Changia Sasa"
     donate now intl: "au saidia/kuchangia kimataifa"
@@ -747,9 +948,6 @@ sw:
     public domain: "Uwanja wa Umma"
     loading: "Inatafuta toleo zingine"
     load error: "Samahani, kulikuwa na tatizo kutafuta matoleo zaidi. Funga menyu hii kisha jaribu tena."
-  reader help:
-    title: "Chagua mstari "
-    line 1: "Bonyeza au bomba kwenye mstari wowote au ukusanyaji wa\nmistari ili kuweka alama, kuonyesha, kutengeneza kumbukumbu,\nau kushiriki kwa marafiki wako!"
   campaigns:
     100m:
       logo: "YouVersion: App ya Biblia"
@@ -779,3 +977,9 @@ sw:
       sidebar:
         tagline: "Tutengeneze ukumbusho pamoja."
         button: "Shirikisha App ya Biblia"
+  ui:
+    pagination:
+      next page: "Kurasa inayofuata"
+      previous page: "Kurasa iliyopita"
+    datetime:
+      just now: "sasa hivi"
