--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -1,5 +1,37 @@
 id:
   social:
+    intro page:
+      main heading: "Perbincangan & Penemuan"
+      main description: "Cara baru menjelajahi Alkitab dengan teman-teman terpercaya"
+      moment:
+        user aaron: "Aaron Steele"
+        user andy: "Andy Knight"
+        timestamp: "5 hari yang lalu"
+        title: "Tersorot Kitab Mazmur 31:8"
+        verse: "Aku akan bersorak-sorak dan bersukacita karena kasih setia-Mu, sebab Engkau telah menilik sengsaraku, telah memperhatikan kesesakan jiwaku."
+        reference: "Mazmur 31:8"
+        discover:
+          copy: "Telusuri dan belajar bersama teman-teman Anda sewaktu mereka menambahkan sorotan, tanda halaman dan catatan mereka."
+          button: "Dimana saya dapat mulain?"
+        share:
+          copy: "Bagikan percakapan terbuka tentang Firman Tuhan."
+          button: "Mari mulai dengan mencari beberapa teman-teman."
+        likes:
+          info: "dan 4 lagi seperti ini."
+        comments:
+          first:
+            text: "Sungguh perlu mendengar tetang ini hari ini, terima kasih. Mari kita coba lanjutan lagi ini."
+            time: "kira-kira 3 jam yang lalu."
+          second:
+            text: "Amin, saya juga. Mengirimkan Anda sebuah email sekarang."
+            time: "sekitar 27 menit yang lalu"
+          field placeholder: "Tulis Komentar..."
+    widget:
+      timeline: "Waktu"
+      no activity yet: "Belum ada aktivitas sama sekali."
+    moment:
+      read all: "Terbaca Semua"
+      read less: "Membaca lebih sedikit"
     share: "Bagikan"
     my connections: "Akun terkait"
     connected as: "Anda tersambung dengan %{connection} sebagai %{username}"
@@ -32,6 +64,9 @@ id:
     users username not available: "Nama Pengguna yang diberikan tidak tersedia"
     users username or password invalid: "Nama Pemakai atau kata sandi yang diberikan tidak berlaku"
     users username required: "Anda harus masukkan nama pengguna."
+    users first name required: "Anda harus memasukkan nama depan."
+    users last name required: "Anda harus memasukkan nama belakang."
+    moments content required: "Isi tidak bisa kosong"
   meta:
     kids_app:
       title: "Aplikasi Alkitab untuk anak-anak."
@@ -62,7 +97,7 @@ id:
   new note: "Buat Catatan"
   share success: "Pesan Anda telah dibagikan."
   share error: "Maaf, terjadi kesalahan saat membagikan pesan Anda. Cobalah kembali."
-  google plus: "Google +"
+  google plus: "Google+"
   connect to: "Hubungkan dengan akun %{connection} Anda"
   deleted connection: "Koneksi Anda ke %{connection} telah berhasil diputus."
   deleted connection error: "Maaf, terjadi kesalahan saat memutus sambungan Anda ke %{connection}."
@@ -118,6 +153,7 @@ id:
   find friends: "Temukan Teman"
   search placeholder: "Cari..."
   search: "Cari"
+  more: "Lebih"
   book: "Kitab"
   filter book: "Saring Kitab"
   save: "Simpan"
@@ -131,17 +167,14 @@ id:
   chapter: "Pasal"
   bible: "Alkitab"
   notes title: "Catatan"
-  friends: "Teman-teman"
   groups: "Grup"
   mobile: "Piranti bergerak"
   live: "Langsung/Grup"
   first page: "Halaman Pertama"
   last page: "Halaman Akhir"
-  next page: "Halaman Berikut"
-  previous page: "Halaman sebelumnya"
   invalid username or password: "Nama pengguna atau kata kata sandi salah."
   show all bookmarks: "Tampilkan semua %{total} markah"
-  show all notes: "Tampilkan semua %{total} catatan"
+  show all notes: "Lihat semua catatan"
   recent bookmarks: "Markah Terkini"
   percentage display: "%{number}%"
   myself: "Saya"
@@ -152,7 +185,115 @@ id:
   or:
     lower: "atau"
     upper: "ATAU"
+  moments:
+    vod:
+      title: "Ayat hari ini"
+    friendship:
+      now friends: "Anda sekarang berteman dengan"
+    cta:
+      profile update text: "Bantu teman-teman anda untuk menemukan anda"
+      profile update button: "Perbaharui profil Anda"
+      sharing text: "Bagi ayat-ayat dengan media-media sosial"
+      sharing button: "Aktifkan berbagi"
+      friends text: "Lihat saat-saat beberapa teman Anda dalam ber-Alkitab."
+      friends button: "Cari teman"
+    action:
+      go to scripture: "Menuju firman"
+      load more: "Muat lebih banyak"
+      like: "Suka"
+      liked: "Menyukai"
+      like title: "Menyukai ini"
+      last comment: "Komentar terakhir"
+      share: "Bagikan"
+      share title: "Bagikan ini dengan teman-teman atau keluarga"
+      comment: "Komentar"
+      comment title: "Lihat semua komentar"
+      edit: "Sunting"
+      edit highlight title: "Edit sorotan ini"
+      edit bookmark title: "Sunting penanda ini"
+      edit note title: "Edit catatan ini"
+      delete: "Hapus"
+      delete confirm: "Apakah anda yakin?"
+      delete highlight title: "Hapus sorotan ini"
+      delete bookmark title: "Hapus markah ini"
+      delete note title: "Hapus catatan ini"
+  notifications:
+    title: "Notifikasi"
+    none: "Anda tidak memiliki pemberitahuan apapun"
+    no new: "Tidak ada pemberitahuan baru"
+    view all: "Lihat semua Pemberitahuan"
+  likes:
+    create success: "Berhasil! Pilihan suka Anda telah disimpan"
+    create failure: "Pilihan suka Anda tidak dapat disimpan"
+    destroy success: "Pilihan suka telah dihapus"
+    destroy failure: "Pilihan suka Anda tidak dapat dihapus"
+  comments:
+    view all N: "Tampilkan semua %{count} komentar"
+    post comment: "Kirim komentar"
+    create success: "Sukses! Komentar Anda telah ditampilkan."
+    create failure: "Komentar tidak dapat dikirim"
+    destroy success: "Komentar dihapus"
+    destroy failure: "Komentar tidak dapat dihapus"
+    form:
+      save button: "Tercantum"
+  friends:
+    you have N friends: "Anda memiliki %{count} teman"
+    none me: "Berbagi momen bacaan Alkitab Anda seperti markah, sorotan, dan catatan dengan teman-teman terdekat dan keluarga Anda."
+    find friends: "Cari teman"
+    blank slate:
+      heading: "Tidak sedang berteman"
+      description: "Anda harus berteman dengan orang ini untuk dapat melihat teman-teman yang dimilikinya."
+    limit notice: "Anda dapat memiliki teman sebanyak 150 teman"
+    limit description: "Membatasi persahabatan anda pada aplikasi Alkitab kepada orang yang Anda kenal betul akan menciptakan lingkungan yang tepat untuk berbagi perbincangan jujur dan penemuan-penemuan Anda dengan teman kepercayaan Anda."
+  friendships:
+    find friends title: "Cari teman"
+    search by name: "Mencari berdasarkan nama"
+    search button: "Ke"
+    widget:
+      find friends title: "Cari teman"
+      search by name: "Mencari berdasarkan nama"
+      search button: "Ke"
+    offer success: "Permohonan berteman terkirim"
+    offer failure: "Kesalahan dalam mengirim permohonan untuk berteman"
+    create success: "Berhasil! Sekarang Anda berteman."
+    create failure: "Kesalahan dalam menjalin persahabatan"
+    destroy success: "Permohonan ditolak"
+    destroy failure: "Kesalahan dalam menolak permintaan"
+    requests title: "Permohonan untuk berteman"
+    requests view all: "Lihat semua permohonan untuk berteman"
+    requests none: "Anda tidak memiliki permohonan untuk berteman"
+    requests no new: "Tidak ada permintaan baru"
+    status:
+      pending: "Permohonan tertunda"
+      friends: "Teman-teman"
+    user wants friendship: "%{pengguna} ingin menjadi teman Anda"
+    user wants friendship partial: "ingin menjadi teman Anda"
+    form:
+      remove friend button: "Melepaskan pertemanan"
+      remove friend button title: "Hapus orang ini dari daftar teman anda"
+      add friend button: "Menambah teman"
+      add friend button title: "Mengirimkan %{user} permintaan pertemanan"
+      accept button: "Terima"
+      accept request button: "Menerima permintaan"
+      ignore button: "Abaikan"
+      ignore request button: "Mengabaikan permintaan"
   notes:
+    none user: "%{pengguna} tidak memiliki catatan apapun."
+    blank slate:
+      heading: "Anda belum mempunyai catatan apapun"
+      description: "Ketika anda sedang membaca Alkitab, di saat anda mendengar suara Tuhan yang kecil dan tenang berbicara, anda bisa menambahkan pikiran tersebut di sini.  Catatan anda akan disimpan <em>sebagai Pribadi</em> secara standar. Bila anda ingin membagikan catatan tersebut dengan Teman, buka catatan tersebut dan ubah menjadi <em>Umum</em>."
+    form:
+      title field: "Judul:"
+      content field: "Isi:"
+      highlight field: "Tandai: (pilihan)"
+      reference field: "Referensi:"
+      status field: "Status:"
+      save button: "Simpan"
+    status:
+      private: "Pribadi"
+      public: "Umum"
+      friends: "Hanya untuk teman"
+      draft: "Rancangan"
     list title: "Catatan"
     loading community: "Memuat catatan komunitas..."
     no community notes: "Tidak ditemukan catatan komunitas dengan referensi ayat yang dipilih. Untuk membuat catatan, pilih ayat di pembaca Akitab lalu klik tombol Pilihan di atas pembaca."
@@ -160,6 +301,7 @@ id:
     private: "Pribadi"
     is private: "Catatan yang diminta bersifat pribadi."
     draft: "Draf"
+    friends: "Teman-teman"
     creation form errors: "Kesalahan berikut menghambat pembuatan catatan Anda:"
     reference field: "Referensi:"
     version field: "Versi:"
@@ -180,7 +322,10 @@ id:
     cancel: "Batalkan"
     pop out: "Pop out"
     none found: "Tidak ditemukan catatan..."
-    successfully deleted: "Catatan dihapus"
+    create success: "Berhasil! Catatan Anda tersimpan."
+    create failure: "Kesalahan dalam menyimpan catatan"
+    destroy success: "Catatan dihapus"
+    destroy failure: "Kesalahan dalam menghapus catatan"
   ref:
     loading secondary: "Memuat Refrensi dalam Versi Kedua..."
     clear verses: "Bebaskan Ayat Terpilih"
@@ -211,6 +356,8 @@ id:
     profile form errors: "Kesalahan berikut menghambat pembaharuan profil Anda:"
     email address: "Alamat email"
     user name: "Nama pengguna"
+    first name: "Nama depan"
+    last name: "Nama belakang"
     agreement: "Saya setuju dengan %{terms_link} YouVersion."
     terms and conditions: "syarat dan ketentuan"
     facebook sign up success: "Selamat! Anda telah disahkan lewat Facebook. Pilihlah nama pengguna dan kata sandi YouVersion untuk melanjutkan."
@@ -228,6 +375,7 @@ id:
     my profile: "Profil saya"
     edit profile: "Sunting Profil"
     update profile: "Perbarui Profil"
+    go to your profile: "Ke Profil Saya"
     other user profile: "Profil %{username}"
     my password: "Ubah kata sandi saya"
     edit password: "Ubah Kata Sandi"
@@ -240,7 +388,7 @@ id:
     edit account_existence: "Hapus Akun"
     delete account button: "Hapus Akun YouVersion Saya"
     no devices: "Tak ada piranti yang terhubung ke akun YouVersion Anda"
-    no devices download copy: "Menurut Alkitab online, YouVersion.com, Aplikasi Alkitab adalah Alkitab seluler gratis yang bisa dipasang hampir di semua perangkat seluler. Aplikasi Alkitab memungkinkan pengguna membaca Alkitab, berbagi ayat dengan jejaring sosial mereka, memarkahi bacaan kesukaan mereka, dan banyak lagi&mdash;semua dalam format yang mengikuti gaya hidup dinamis mereka. Kunjungi <a href='https://www.bible.com/download'>bible.com/download</a> dari perangkat selular Anda untuk mengunduh Ap Alkitab dan hubungkan akun Anda!"
+    no devices download copy: "Menurut Alkitab online YouVersion, aplikasi Alkitab ini gratis dan bisa dipasang hampir di semua jenis perangkat seluler. Aplikasi Alkitab ini membuat pengguna dapat membaca Alkitab, membagikan ayat dengan media sosial yang dimiliki, menandai pasal favorit, dan banyak lagi&mdash;semua dalam format yang mengikuti perkembangan gaya hidup dinamis mereka. Kunjungi <a href='https://www.bible.com/app'>bible.com/app</a> dari perangkat selular Anda untuk mengunduh aplikasi Alkitab ini dan hubungkan dengan akun Anda!"
     yes delete: "Ya, Hapus Akun Saya"
     account delete success: "Akun YouVersion anda telah terhapus dengan sukses. Kami berharap anda terus menemukan cara bermakna untuk berinteraksi dengan Alkitab. Beberapa aplikasi ini mungkin membantu seraya anda melangkah maju: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Jika Anda menghapus akun Anda, selamanya Anda akan kehilangan semua informasi, sejarah, dan personalisasi (seperti catatan, markah, sorotan, dll.) Anda di YouVersion.com dan Aplikasi Alkitab. Tindakan ini tidak dapat dibatalkan baik oleh anda maupun tim kami. Jika Anda yakin, silakan lanjut di bawah ini."
@@ -254,7 +402,7 @@ id:
     my badges: "Lencana Saya"
     revised date: "Terakhir diubah pada %{date}"
     update email copy: "Masukkan alamat email baru dan klik Perbarui Email. Kami akan mengirimi Anda tautan untuk menetapkan alamat email baru Anda."
-    edit email: "Perbarui Alamat Email"
+    edit email: "Ganti alamat email"
     update email check: "Silakan periksa email Anda dan klik tautan untuk menetapkan alamat email baru Anda."
     confirm update email success: "Terima kasih! Anda telah memperbarui alamat email Anda."
     confirm update email error: "Maaf, ada masalah dalam menyelesaikan perubahan alamat email Anda."
@@ -355,6 +503,16 @@ id:
       general title: "Informasi Umum"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "Lanjutkan, (masih) tidak ada yang dapat diihat disini"
+        description: "Mulailah terlibat dengan Alkitab, atau teman-teman anda, dan halaman ini akan menampilkan hal-hal lampau yang telah anda alami."
+      visit friend: "Kunjungi profil %{teman}"
+      tab activity: "Kegiatan"
+      tab friends: "Teman-teman"
+      tab notes: "Catatan"
+      tab bookmarks: "Penanda"
+      tab highlights: "Sorotan"
+      tab badges: "Lencana"
       first name: "Nama Depan"
       last name: "Nama Belakang"
       email: "Alamat email"
@@ -394,6 +552,10 @@ id:
       reading_plans: "Beritahu saya tentang informasi rencana bacaan yang telah saya mulai"
       publishing partners: "Selalu beritahu saya tentang berita-berita dari mitra-mitra konten YouVersion."
       update: "Perbarui Notifikasi"
+      friendships: "Beritahu saya tentang permohonan untuk berteman"
+      moments: "Beritahu saya tentang aktifitas teman-teman saya"
+      comments: "Beritahu saya tentang aktivitas komentar-komentar saya"
+      likes: "Beritahu saya tentang siapa yang menyukai aktifitas saya"
   bookmarks:
     new: "Markah Baru"
     edit: "Sunting"
@@ -404,12 +566,14 @@ id:
     all: "Semua"
     labels label: "Label:"
     title: "Markah"
+    my labels: "Label-label saya"
     not found: "Markah memberi Anda panduan referensi cepat ke perikop favorit Anda ataupun ke pasal terakhir yang Anda baca di kitab tertentu. Untuk menambahkan markah, pilih ayat di pembaca Alkitab dan kemudian klik tombol Dipilih yang ada di bagian teratas dari pembaca."
     other user not found: "%{username} belum menyimpan markah apapun."
     creation form errors: "Kesalahan(-kesalahan) berikut menghalangi pembuatan markah Anda:"
-    successfully created: "Markah ditambahkan"
-    successfully deleted: "Markah Dihapus"
-    successfully updated: "Markah Diperbarui"
+    create success: "Sukses! Sorotan Anda telah tersimpan."
+    destroy success: "Penanda dihapus"
+    destroy failure: "Kesalahan dalam menghapus penanda"
+    update success: "Penanda telah diperbarui"
     labels placeholder: "Pisahkan beberapa label dengan koma"
     save: "Simpan Markah"
     confirm delete: "Ya, saya yakin"
@@ -420,10 +584,36 @@ id:
     update: "Perbarui"
     color: "Warna:"
     version field: "Versi:"
+    none user: "%{username} tidak memiliki markah"
+    blank slate:
+      heading: "Tandai ayat-ayat yang bermakna"
+      description: "Ketika membaca Alkitab, pilih sebuah ayat dan tandai. Kembali kesini jika ingin membaca, mengedit atau menghapus penanda ini."
+    form:
+      title field: "Judul:"
+      reference field: "Referensi:"
+      labels field: "Label-label (dipisahkan koma):"
+      highlight field: "Tandai: (pilihan)"
+      colors field: "Warna:"
+      update button: "Perbarui penanda"
+      save button: "Simpan Markah"
   badges:
     earned a badge: "Dapat Lencana"
     user badges: "Lencana %{user}"
+    earned date: "Diperoleh %{username} %{ago} yang lalu"
+    none me: "Anda belum memperoleh lencana apapun."
+    none user: "%{username} belum memperoleh lencana apapun."
   plans:
+    widget:
+      my plans: "Programku"
+      start reading: "Mulai baca"
+      view my plans: "Tampilan Rencana Bacaan Saya"
+      featured plans: "Rencana Bacaan Pilihan"
+      view all plans: "Tampilkan semua Rencana Bacaan"
+    settings: "Pengaturan"
+    privacy:
+      visible to friends?: "Apakah Anda ingin aktivitas rencana bacaan ini terlihat oleh teman-teman Anda?"
+      private: "Pribadi"
+      public: "Umum"
     title: "Program Bacaan"
     browse by category: "Telusuri berdasar kategori"
     browse plans: "Telusuri Rencana %{category}"
@@ -454,7 +644,6 @@ id:
     no public plans: "Tidak ada rencana bacaan terlihat untuk %{username}."
     filter by lang: "Saring Rencana berdasar Bahasa"
     plan settings: "Pengaturan Rencana"
-    settings: "Pengaturan"
     search: "Cari"
     search placeholder: "Cari Rencana %{category}"
     subscribe to plan: "Mulai Rencana ini"
@@ -566,18 +755,31 @@ id:
     none: "Maaf, suara tidak tersedia untuk versi ini."
     chapter only: "Maaf, suara tidak tersedia untuk ayat-ayat. Lihat di pembaca untuk pasal suara."
     close player menu: "Tutup"
+    publisher website: "Situs web penerbit"
   highlights:
+    title: "Sorotan"
+    blank slate:
+      heading: "Tandai ayat-ayat yang bermakna"
+      description: "Ketika membaca Alkitab, pilih sebuah ayat dan tandai. Kembali ke sini untuk melihat, mengedit atau menghapus tanda tersebut."
+    none user: "%{username} tidak memiliki hal-hal yang ditandai"
     choose color: "Pilih Warna"
+    create success: "Berhasil! Sorotan Anda tersimpan"
+    create failure: "Kesalahan dalam menyimpan sorotan"
+    destroy success: "Sorotan telah dihapus"
+    destroy failure: "Kesalahan dalam menghapus hal yang ditandai"
     creation error: "Maaf, tidak dapat memberi sorotan."
     delete error: "Maaf, sorotan tidak bisa disingkirkan."
+    form:
+      save button: "Simpan tanda warna sorotan"
   searching:
     bible: "Alkitab"
-    plans: "Program Bacaan"
+    plans: "Program"
     users: "Pengguna"
     notes: "Catatan"
     total results: "Sekitar %{total} Hasil"
     suggestion html: "Apakah maksud Anda %{suggestion_link}?"
     all versions: "Semua Versi %{language_name}"
+    results for: "Cari hasil pencarian untuk:"
   donate:
     donate now: "Sumbang Sekarang"
     donate now intl: "atau menyumbang secara internasional"
@@ -747,9 +949,6 @@ id:
     public domain: "Ranah Umum"
     loading: "Memuat Lebih Banyak Versi..."
     load error: "Maaf, ada masalah untuk memuat lebih banyak versi. Tutup menu ini dan buka kembali untuk mencoba."
-  reader help:
-    title: "Pilih ayat..."
-    line 1: "Klik atau tekan ayat yang mana saja ataupun sekumpulan ayat untuk menanda, soroti, ciptakan catatan, atau berbagi dengan teman-teman anda!"
   campaigns:
     100m:
       logo: "YouVersion: Ap Alkitab"
@@ -779,3 +978,9 @@ id:
       sidebar:
         tagline: "Mari kita mengukir sejarah bersama."
         button: "Bagikan Aplikasi Alkitab"
+  ui:
+    pagination:
+      next page: "Halaman Berikut"
+      previous page: "Halaman sebelumnya"
+    datetime:
+      just now: "baru saja"
