--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -1,5 +1,37 @@
 ko:
   social:
+    intro page:
+      main heading: "대화와 발견"
+      main description: "친한 친구들과 함께 성경을 읽는 새로운 방법"
+      moment:
+        user aaron: "애론 스틸"
+        user andy: "앤디 나이트"
+        timestamp: "5일 전"
+        title: "시편 31:7을 책갈피"
+        verse: "나의 고통을 아시고  내 영혼의 괴로움을 감싸주시는  멈추지 않는 사랑에 감사드리며 기뻐합니다."
+        reference: "시편 31:7"
+        discover:
+          copy: "친구들과 같이 하이라이트 또는 책갈피를 하거나 노트를 작성하면서 함께 찾고 배우세요."
+          button: "어디서 부터 시작 할까요?"
+        share:
+          copy: "성경에 대해서 진솔한 대화를 나눠보세요."
+          button: "친구를 찾는 것으로 시작해 보세요."
+        likes:
+          info: "이와 같은 것이 4 개더 "
+        comments:
+          first:
+            text: "참으로 오늘 들어야 했습니다. 감사합니다. 곧 따라갑시다!"
+            time: "약 3 시간 전"
+          second:
+            text: "저도 역시 아멘입니다. 지금 이메일을 보냅니다."
+            time: "약 27 분 전"
+          field placeholder: "댓글을 쓰세요..."
+    widget:
+      timeline: "타임라인"
+      no activity yet: "아직 아무 활동도 없습니다."
+    moment:
+      read all: "모두 읽기"
+      read less: "일부 보기"
     share: "공유"
     my connections: "접속 계정"
     connected as: "%{connection} 에 %{username} 사용자명으로 접속되었습니다."
@@ -32,6 +64,9 @@ ko:
     users username not available: "입력하신 사용자명은 사용할 수 없습니다."
     users username or password invalid: "입력하신 사용자 이름이나 암호가 맞지 않습니다."
     users username required: "사용자명을 입력해주세요,"
+    users first name required: "이름을 입력해주세요."
+    users last name required: "성을 입력해 주세요."
+    moments content required: "내용이 있어야 합니다."
   meta:
     kids_app:
       title: "어린이들을 위한 성경 앱"
@@ -118,6 +153,7 @@ ko:
   find friends: "친구찾기"
   search placeholder: "검색 ..."
   search: "검색"
+  more: "더 보기"
   book: "성경"
   filter book: "성경 필터..."
   save: "저장"
@@ -131,17 +167,14 @@ ko:
   chapter: "장"
   bible: "성경"
   notes title: "노트"
-  friends: "내 친구"
   groups: "그룹"
   mobile: "이동기기"
   live: "라이브/그룹"
   first page: "첫 페이지"
   last page: "마지막 페이지"
-  next page: "다음 페이지"
-  previous page: "이전 페이지"
   invalid username or password: "사용자명 혹은 비밀번호 오류."
   show all bookmarks: "전체 %{total} 책갈피 보기"
-  show all notes: "전체 %{total} 노트 보기"
+  show all notes: "전체 노트 보기"
   recent bookmarks: "최근 책갈피"
   percentage display: "%{number}%"
   myself: "나"
@@ -152,7 +185,115 @@ ko:
   or:
     lower: "또는"
     upper: "혹은"
+  moments:
+    vod:
+      title: "오늘의 말씀"
+    friendship:
+      now friends: "회원님은 이제 친구입니다"
+    cta:
+      profile update text: "친구들이 회원님을 찾을 수 있도록 도와주세요."
+      profile update button: "프로필 업데이트"
+      sharing text: "소셜 네트워크를 통해 말씀을 공유하세요"
+      sharing button: "공유기능 켜기"
+      friends text: "성경속 친구들의 기록을 보세요."
+      friends button: "친구찾기"
+    action:
+      go to scripture: "말씀으로 가기"
+      load more: "추가 로드"
+      like: "좋아요"
+      liked: "좋아요"
+      like title: "좋아요"
+      last comment: "마지막 댓글"
+      share: "공유하기"
+      share title: "친구들이나 가족과 공유하기"
+      comment: "댓글"
+      comment title: "모든 댓글 보기"
+      edit: "편집"
+      edit highlight title: "하이라이트 수정"
+      edit bookmark title: "책갈피 수정"
+      edit note title: "노트 수정"
+      delete: "삭제"
+      delete confirm: "확실합니까?"
+      delete highlight title: "하이라이트 삭제"
+      delete bookmark title: "책갈피 삭제"
+      delete note title: "노트 삭제"
+  notifications:
+    title: "알림"
+    none: "알림 공지가 없습니다"
+    no new: "새로운 알림"
+    view all: "모든 알림 공지 보기"
+  likes:
+    create success: "좋아요가 저장되었습니다."
+    create failure: "좋아요가 저장되지 않았습니다."
+    destroy success: "좋아요가 삭제되었습니다."
+    destroy failure: "좋아요가 삭제되지 않았습니다."
+  comments:
+    view all N: "%{count} 댓글 모두 보기"
+    post comment: "댓글 달기"
+    create success: "댓글이 저장되었습니다."
+    create failure: "댓글을 달 수가 없습니다"
+    destroy success: "댓글 삭제됨"
+    destroy failure: "댓글이 삭제되지 않았습니다."
+    form:
+      save button: "올리기"
+  friends:
+    you have N friends: "%{count}명의 친구가 있습니다."
+    none me: "성경 속의 책갈피, 하이라이트 노트 등을 친구 가족들과 나누세요."
+    find friends: "친구찾기"
+    blank slate:
+      heading: "친구가 아닙니다."
+      description: "친구들을 보기 위해서는 이 회원님과 먼저 친구가 되어야 합니다."
+    limit notice: "최대 150명의 친구를 만드실 수 있습니다."
+    limit description: "성경 앱 친구 관계를 잘 아는 사람들로 제한하는 것이 믿을 수 있는 친구들과의 진솔한 대화와 발견한 것들을  나눌 수 있는 환경을 조성합니다."
+  friendships:
+    find friends title: "친구찾기"
+    search by name: "이름으로 검색"
+    search button: "가기"
+    widget:
+      find friends title: "친구찾기"
+      search by name: "이름으로 검색"
+      search button: "가기"
+    offer success: "친구 신청 보냄"
+    offer failure: "친구신청 오류"
+    create success: "회원님은 이제 친구입니다"
+    create failure: "친구맺기 오류"
+    destroy success: "요청이 거절되었습니다"
+    destroy failure: "친구거절 오류"
+    requests title: "친구 신청"
+    requests view all: "친구신청 모두 보기"
+    requests none: "친구요청이 없습니다"
+    requests no new: "새로운 요청 없음."
+    status:
+      pending: "신청 처리중"
+      friends: "내 친구"
+    user wants friendship: "%{user}님이 친구맺기 원합니다"
+    user wants friendship partial: "친구맺기를 원합니다"
+    form:
+      remove friend button: "친구 제거"
+      remove friend button title: "이 사람을 친구목록에서 제거하기"
+      add friend button: "친구 추가"
+      add friend button title: "%{user}님께 친구 신청"
+      accept button: "수락"
+      accept request button: "요청 수락"
+      ignore button: "무시"
+      ignore request button: "요청 무시"
   notes:
+    none user: "%{username}님은 아직 작성한 노트가 없습니다."
+    blank slate:
+      heading: "회원님이 작성한 노트가 아직 없습니다"
+      description: "성경을 읽으면서 하나님의 미세한 음성을 느끼신다면  그분이 주신 생각들을 노트에 추가할 수 있습니다. 노트는 <em>비공개</em> 로 초기화됩니다. 다른 사람들과 함께 나누기를 원하시면 해당 노트를 <em>공개</em>로 바꾸세요."
+    form:
+      title field: "제목:"
+      content field: "내용:"
+      highlight field: "하이라이트: (선택사항)"
+      reference field: "참조구절:"
+      status field: "상태:"
+      save button: "저장"
+    status:
+      private: "비공개"
+      public: "공개"
+      friends: "친구들만"
+      draft: "임시저장"
     list title: "노트"
     loading community: "공동체 노트 로딩중 ..."
     no community notes: "선택하신 구절에 관한 공동체 노트가 없습니다. 노트 작성을 원하시면 성경 리더에서 원하는 구절을 선택한 후 리더 상단에 있는  '선택' 버튼을 클릭하면 됩니다."
@@ -160,6 +301,7 @@ ko:
     private: "비공개"
     is private: "요청하신 노트는 비공개입니다."
     draft: "임시저장"
+    friends: "내 친구"
     creation form errors: "다음의 오류로인해서 노트가 생성되지 않았습니다:"
     reference field: "참조구절:"
     version field: "구절:"
@@ -180,7 +322,10 @@ ko:
     cancel: "취소"
     pop out: "다른 창에서 보기"
     none found: "노트가 없습니다..."
-    successfully deleted: "노트를 삭제했습니다."
+    create success: "노트가 저장되었습니다."
+    create failure: "노트 저장 오류"
+    destroy success: "노트 삭제됨"
+    destroy failure: "노트삭제 오류"
   ref:
     loading secondary: "두번째 번역본에서 참고 구절을 로딩합니다."
     clear verses: "선택구절 취소"
@@ -211,6 +356,8 @@ ko:
     profile form errors: "다음의 오류로 인해서 프로필을 변경하지 못했습니다."
     email address: "이메일 주소"
     user name: "사용자명"
+    first name: "이름"
+    last name: "성"
     agreement: "YouVersion의 %{terms_link} 에 동의합니다."
     terms and conditions: "사용계약과 조건"
     facebook sign up success: "페이스북을 통해서 승인을 받았습니다.  YouVersion 사용자명과 비밀번호를 선택해주세요."
@@ -228,6 +375,7 @@ ko:
     my profile: "내 프로필"
     edit profile: "프로필 수정"
     update profile: "프로필 업데이트"
+    go to your profile: "프로필로 가기"
     other user profile: "%{username}님의 프로필"
     my password: "비밀번호 변경"
     edit password: "비밀번호 변경"
@@ -240,6 +388,7 @@ ko:
     edit account_existence: "계정 삭제"
     delete account button: "YouVersion 계정 삭제하기"
     no devices: "YouVersion 계정에 연결된 기기가 없습니다."
+    no devices download copy: "YouVersion 성경 앱은 거의 모든 이동 기기에 설치가 가능한 온라인 기반의 성경입니다. 성경 앱은 모바일 환경에서 성경을 읽고, 소셜 네트워크를 통해서 말씀을 나누고, 성경 구절을 책갈피하는 등등 여러가지 일들을 가능하게 해 줍니다.  여러분의 이동기기에서 <a href='https://www.bible.com/app'>bible.com/app</a>를 방문하셔서 성경 앱을 다운로드하고 계정을 연결하세요!"
     yes delete: "계정을 삭제해주세요."
     account delete success: "YouVersion 계정이 삭제되었습니다. 앞으로도 성경과 계속 동행하시기를 바랍니다.  아래의 앱들이 혹 도움이 될 것 같아서 소개합니다.\n<a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "만약 계정을 삭제하시게되면, YouVersion이나 앱에 저장된 귀하의 개인 정보, 사용 내역 및 개인 설정이 (예를들면 노트, 책갈피, 하이라이트 등등) 영구히 지워집니다.  아울러 한 번 삭제된 내용은 귀하나 YouVersion 관리자도 재생할 수없습니다.   이 점을 감안하신 후에도 삭제를 원하시면 아래와 같이 진행하세요."
@@ -253,6 +402,7 @@ ko:
     my badges: "내 배지"
     revised date: "%{date} 에 최정 수정됨"
     update email copy: "새 이메일 주소를 입력후 이메일 변경을 클릭하세요. 새 이메일 주소 확인을 위한 인증메일을 보내겠습니다."
+    edit email: "이메일 변경"
     update email check: "받으신 이메일에서 새 이메일 주소 확인 링크를 클릭하세요."
     confirm update email success: "감사합니다! 이메일 주소가 변경되었습니다."
     confirm update email error: "죄송합니다. 이메일 주소 변경시 문제가 발생하였습니다."
@@ -354,6 +504,16 @@ ko:
       general title: "범용 정보"
       general text: "전면 동의: 이 이용약관은 사용자와 LifeChurch.tv 간의 전면 동의를 전제로 하며, YouVersion에 대해 사용자와 LifeChurch.tv 간의 사전 동의를 대체하여 사용자의 YouVersion 이용을 좌우합니다. 또한 사용자는 추가 조건의 대상이 됩니다.\n법률 조항 선택: 이 사용약관과 사용자와 LifeChurch.tv의 관계는 법률 규정의 충돌과 상관없이 오클라호마 주 법의 지배를 받습니다. 사용자와 LifeChurch.tv는 오클라호마 내의 오클라호마 카운티에 위치한 법정의 개인적이며 독점적인 관할에 따를 것에 동의합니다.\n권리 포기 및 분리가능 조항: LifeChurch.tv가 사용약관의 권리나 규정을 실행하거나 실시하지 못한 경우는 그러한 권리나 규정을 포기하는 것으로 여길 수 없습니다. 권한이 있는 관할 기관에서 그러한 사용약관 규정이 유효하지 않다고 판단하는 경우에라도, 당사자들은 법원이 당사자들의 목적에 대하여 그 조항에 반영된 대로 실행하도록 힘써야 하며, 이 사용조항의 다른 조항들은 완전히 유효하다는 점에 동의합니다.\n생존자권이나 양도권 없음: 사용자의 LifeChurch.tv 계정은 양도할 수 없으며 사용자의 계정에 있는 LifeChurch.tv ID나 컨텐츠에 대한 권리는 사용자가 사망한 후 종료된다는 점에 동의합니다. 사망진단서 사본을 수령하면 LifeChurch.tv는 해당 사용자의 계정을 종료시키고 그 계정에 속한 모든 컨텐츠를 영구 삭제할 수 있습니다.\n출소기한법: YouVersion이나 이 사용약관으로 인한, 또는 그 사용으로 인한 요청이나 조치는 그러한 요청이나 조치가 제기된 지 1년 내에 제출되어야 하며, 그렇지 않을 시 어떠한 법령이나 법규가 이를 반대한다 할지라도 영구 금지된다는 점을 이해하고 동의합니다.\n이 사용약관 내 조항 표제는 편의상 쓰여졌으며 법적, 계약적 효력이 없습니다."
     profile:
+      blank slate:
+        heading: "아직 보여드릴 것이 없습니다."
+        description: "성경이나 친구들의 활동에 참여해주세요, 여기에 회원님의 활동 기록을 표시해 줄 겁니다"
+      visit friend: "%{friend}님 프로필 보기"
+      tab activity: "활동"
+      tab friends: "내 친구"
+      tab notes: "노트"
+      tab bookmarks: "책갈피"
+      tab highlights: "하이라이트"
+      tab badges: "배지"
       first name: "이름"
       last name: "성"
       email: "이메일 주소"
@@ -393,6 +553,10 @@ ko:
       reading_plans: "시작한 읽기 계획에 대한 상세정보 알림"
       publishing partners: "YouVersion 콘텐츠 파트너로 부터의 소식을 계속 받고 싶습니다."
       update: "알림기능 설정 업데이트"
+      friendships: "친구요청에 대해 통보해주세요"
+      moments: "친구의 활동에 대해 통보해주세요"
+      comments: "내 활동에 관한 댓글에 대해 통보해 주세요"
+      likes: "내 활동에 좋아요가 생겼을 때 알려 주세요."
   bookmarks:
     new: "새로운 책갈피"
     edit: "편집"
@@ -403,12 +567,14 @@ ko:
     all: "전체책갈피"
     labels label: "라벨:"
     title: "책갈피"
+    my labels: "나의 라벨"
     not found: "책갈피는 좋아하는 구절이나 마지막으로 읽은 부분으로 즉시 이동할 수 있도록 도와드립니다. 책갈피를 해두기 위해서는, 먼저 성경 리더에서 원하는 구절을 선택한 후 리더 상단의 '선택' 버튼을 클릭하면 됩니다."
     other user not found: "%{username}님이 등록한 책갈피는 아직 없습니다."
     creation form errors: "아래의 이유로 인해서 책갈피가 만들어지지 않았습니다."
-    successfully created: "책갈피 추가"
-    successfully deleted: "책갈피 제거"
-    successfully updated: "책갈피가 업데이트 되었습니다."
+    create success: "책갈피가 저장되었습니다."
+    destroy success: "책갈피 제거"
+    destroy failure: "책갈피 삭제 오류"
+    update success: "책갈피가 업데이트 되었습니다."
     labels placeholder: "여러개의 라벨은 쉼표로 구분 해 주세요."
     save: "책갈피 저장"
     confirm delete: "예, 확실합니다."
@@ -419,10 +585,36 @@ ko:
     update: "업데이트"
     color: "색깔:"
     version field: "번역본:"
+    none user: "%{username}님은 책갈피가 아직 없습니다"
+    blank slate:
+      heading: "의미있는 구절 책갈피 해두기"
+      description: "성경을 읽으시는 중 원하시는 말씀을 선택하여 책갈피 하세요. 다시 이곳으로 돌아와서 책갈피를 다시 보거나, 수정 혹은 삭제 하실 수 있습니다."
+    form:
+      title field: "제목:"
+      reference field: "참조:"
+      labels field: "라벨 (컴마로 구분):"
+      highlight field: "하이라이트: (선택사항)"
+      colors field: "색깔:"
+      update button: "책갈피 업데이트"
+      save button: "책갈피 저장"
   badges:
     earned a badge: "배지 획득"
     user badges: "%{user}님의 배지"
+    earned date: "%{username}님이 %{ago} 전에 받음"
+    none me: "아직 받으신 배지가 없습니다."
+    none user: "%{username}님은 아직 받은 배지가 없습니다."
   plans:
+    widget:
+      my plans: "나의 계획"
+      start reading: "읽기 시작"
+      view my plans: "나의 계획 보기"
+      featured plans: "특별 계획"
+      view all plans: "전체 계획 보기"
+    settings: "설정"
+    privacy:
+      visible to friends?: "이 묵상 계획과 관련된 회원님의 활동이 친구들에게 보여지길 원하십니까?"
+      private: "비공개"
+      public: "공개"
     title: "묵상"
     browse by category: "카테고리별 보기"
     browse plans: "%{category} 항목의 계획 보기"
@@ -453,7 +645,6 @@ ko:
     no public plans: "%{username}님의 공개된 읽기계획이 없습니다."
     filter by lang: "언어별 계획 보기"
     plan settings: "계획 설정"
-    settings: "설정"
     search: "검색"
     search placeholder: "%{category} 항목 계획 검색"
     subscribe to plan: "계획 시작"
@@ -565,10 +756,22 @@ ko:
     none: "죄송합니다. 이 번역본에 해당하는 오디오가 없습니다."
     chapter only: "죄송합니다. 오디오는 구절별로 제공되지 않습니다. 리더에서 해당 장으로 가서 오디오를 이용하세요."
     close player menu: "닫기"
+    publisher website: "발행인 웹사이트"
   highlights:
+    title: "하이라이트"
+    blank slate:
+      heading: "의미있는 구절 하이라이트하기 "
+      description: "성경을 읽으는 중 원하시는 말씀을 선택하여 하이라이트 하세요. 다시 이곳으로 돌아와서 다시 보거나, 수정 혹은 삭제 하실 수 있습니다."
+    none user: "%{username}님은 하이라이트하신 말씀이 없습니다"
     choose color: "색깔을 선택하세요."
+    create success: "하이라이트가 저장되었습니다."
+    create failure: "하이라이트 저장오류"
+    destroy success: "하이라이트 삭제"
+    destroy failure: "하이라이트 삭제 오류"
     creation error: "죄송합니다. 하이라이트를 할 수 없습니다."
     delete error: "죄송합니다. 하이라이트를 제거 할 수 없습니다."
+    form:
+      save button: "하이라이트 저장"
   searching:
     bible: "성경"
     plans: "묵상"
@@ -577,6 +780,7 @@ ko:
     total results: "약 %{total}건의 검색 결과"
     suggestion html: "%{suggestion_link}을 원하셨나요?"
     all versions: "%{language_name} 전체 번역본"
+    results for: "검색 결과: "
   donate:
     donate now: "지금 후원하기"
     donate now intl: "해외에서 후원하기"
@@ -746,9 +950,6 @@ ko:
     public domain: "공개판"
     loading: "번역본 추가 로딩중 ..."
     load error: "번역본을 추가로 로딩하는 중 오류가 발생했습니다.  메뉴를 닫으신 후에 다시 시도를 해주세요."
-  reader help:
-    title: "구절 선택하기 ..."
-    line 1: "원하시는 구절을 클릭하거나 탭하시면 책갈피, 하이라이트, 노트작성, 또는 다른 친구들과 공유하실 수있습니다."
   campaigns:
     100m:
       logo: "YouVersion: 성경 앱"
@@ -778,3 +979,9 @@ ko:
       sidebar:
         tagline: "역사를 함께 만들어 나가요."
         button: "성경 앱을 공유해 주세요."
+  ui:
+    pagination:
+      next page: "다음 페이지"
+      previous page: "이전 페이지"
+    datetime:
+      just now: "지금"
