--- a/config/locales/mn.yml
+++ b/config/locales/mn.yml
@@ -1,5 +1,37 @@
 mn:
   social:
+    intro page:
+      main heading: "Харилцан Яриа & Өрнөл"
+      main description: "Итгэлт найзуудтайгаа библиэр аялцгаая"
+      moment:
+        user aaron: "Аарон Стелэ"
+        user andy: "Энди Найт"
+        timestamp: "5н ѳдрийн ѳмнѳ"
+        title: "Дуулал 31:7 хавчуурга хийсэн"
+        verse: "Би Таны хайр энэрэлд баясан баярлах болно, Яагаад гэвэл Та миний зүдгүүрийг харсан, Та сэтгэлийн минь зовлонг мэдсэн."
+        reference: "Дуулал 31:7"
+        discover:
+          copy: "Найзуудынхаа нэмсэн тодруулгууд, хавчуургууд ба тэмдэглэлүүдээр дамжуулан тэдэнтэй хамт суралц, судал."
+          button: "Би яаж эхлэх вэ?"
+        share:
+          copy: "Бичээсийн тухай илэн далангүй яриагаа хуваалц."
+          button: "Найзуудаа хайхаар эхлээрэй."
+        likes:
+          info: "ба үүнтэй адил 4 байгаа"
+        comments:
+          first:
+            text: "Үүнийг л өнөөдөр сонсох хэрэгтэй байсан юм, баярлалаа. Дараа тухтай яръя!"
+            time: "3-н цаг орчимын ѳмнѳ"
+          second:
+            text: "Амен, би ч бас. Чам руу яг одоо имэйл явуулж байна."
+            time: "27 орчим минутын ѳмнѳ"
+          field placeholder: "Санал оруулах"
+    widget:
+      timeline: "Цагийн Шугам"
+      no activity yet: "Шинэ үйл явдал байхгий."
+    moment:
+      read all: "Бүгдийг унших"
+      read less: "Бага унших"
     share: "Хуваалцах"
     my connections: "Холбогдсон Дансууд"
     connected as: "%{username} хэрэглэгчийн нэрээр %{connection} тэй холбогдсон байна."
@@ -32,6 +64,9 @@ mn:
     users username not available: "Энэ хэрэглэгчийн нэрийг ашиглах боломжгүй байна."
     users username or password invalid: "Таны оруулсан хэрэглэгчийн нэр эсвэл нууц үг буруу байна."
     users username required: "Хэрэглэгчийн нэр оруулах шаардлагатай."
+    users first name required: "Нэрээ оруулах шаардлагатай."
+    users last name required: "Овогоо оруулах шаардлагатай."
+    moments content required: "Энэ хэсэг хоосон байж болохгүй."
   meta:
     kids_app:
       title: "Хүүхдэд зориулсан Библи Апп"
@@ -62,7 +97,7 @@ mn:
   new note: "Шинэ Тэмдэглэл"
   share success: "Таны зурвас бусадтай хуваалцагдлаа."
   share error: "Уучлаарай, Таны зурвасыг бусадтай хуваалцах үед алдаа гарлаа. Та дахин оролдоно уу."
-  google plus: "Google +"
+  google plus: "Google+"
   connect to: " Бүртгэлээ %{connection} тэй холбох "
   deleted connection: "%{connection} -с амжилттай салгагдлаа."
   deleted connection error: "Уучлаарай, таны холболтыг %{connection} -с салгах үед алдаа гарлаа."
@@ -118,6 +153,7 @@ mn:
   find friends: "Найзууд Хайх"
   search placeholder: "Хайх..."
   search: "Хайх"
+  more: "Илүү"
   book: "Ном"
   filter book: "Номууд Шүүх..."
   save: "Хадгалах "
@@ -131,17 +167,14 @@ mn:
   chapter: "Бүлэг"
   bible: "Библи"
   notes title: "Тэмдэглэлүүд"
-  friends: "Найзууд"
   groups: "Группүүд"
   mobile: "Мобайл"
   live: "Шууд/Групп"
   first page: "Эхний Хуудас"
   last page: "Сүүлийн Хуудас"
-  next page: "Дараагийн хуудас"
-  previous page: "Өмнөх хуудас"
   invalid username or password: "Хэрэглэгчийн нэр, нууц үг буруу байна."
   show all bookmarks: "Бүх %{total} хавчуургыг харах"
-  show all notes: "Бүх %{total}  тэмдэглэлийг харах"
+  show all notes: "Бүх тэмдэглэлийг харах"
   recent bookmarks: "Сүүлийн Хавчуургууд"
   percentage display: "%{number}%"
   myself: "Би"
@@ -152,7 +185,115 @@ mn:
   or:
     lower: "эсвэл"
     upper: "ЭСВЭЛ"
+  moments:
+    vod:
+      title: "Ѳнѳѳдѳрийн Ишлэл"
+    friendship:
+      now friends: "Та энэ хүнтэй найз"
+    cta:
+      profile update text: "Найзууддаа таныг олоход туслах уу."
+      profile update button: "Хувийн Мэдээлэлээ Шинэчилэх"
+      sharing text: "Нийтийн сүлжээгээр ишлэлүүд хуваалцах"
+      sharing button: "Хуваалцах боломжтой"
+      friends text: "Найзуудынхаа Библид өнгөрүүлж байгаа мөчүүдийг харах"
+      friends button: "Найзууд олох"
+    action:
+      go to scripture: "Бичээс рүү оч"
+      load more: "Илүү ачаалах"
+      like: "Таалагдсан"
+      liked: "таалагдсан "
+      like title: "Үүнийг лайк хийх"
+      last comment: "Сүүлийн коммент"
+      share: "Хуваалцах"
+      share title: "Үүнийг найзууд эсвэл гэр бүлийнхэнтэй хуваалцах"
+      comment: "Сэтгэгдэл"
+      comment title: "Бүх саналыг харах"
+      edit: "Засах "
+      edit highlight title: "Энэ тодруулгыг зас"
+      edit bookmark title: "Энэ хавчуургыг зас"
+      edit note title: "Энэ тэмдэглэлийг зас"
+      delete: "Устгах"
+      delete confirm: "Та итгэлтэй байна уу?"
+      delete highlight title: "Энэ тодруулгыг устга"
+      delete bookmark title: "Энэ хавчуургыг устга"
+      delete note title: "Энэ тэмдэглэлийг устга"
+  notifications:
+    title: "Мэдэгдлүүд"
+    none: "Ямар ч санамж байхгүй"
+    no new: "Шинэ санамж байхгүй"
+    view all: "Бүх санамжуудыг харах"
+  likes:
+    create success: "Таны Лайк амжилттай хадгалагдлаа"
+    create failure: "Лайк хадгалагдах боломжгүй"
+    destroy success: "Лайк устгагдсан"
+    destroy failure: "Лайк устгах боломжгүй"
+  comments:
+    view all N: "Бүх %{count} сэтгэгдэлүүд харах"
+    post comment: "Санал оруулах"
+    create success: "Санал амжилттай орлоо."
+    create failure: "Сэтгэгдлийг оруулах боломжгүй"
+    destroy success: "Сэтгэгдэл устсан"
+    destroy failure: "Сэтгэгдлийг устгах боломжгүй"
+    form:
+      save button: "Оруулах"
+  friends:
+    you have N friends: "Танд  %{тоо} найзууд байна"
+    none me: "Библи унших явцдаа хийсэн хавчуурга, тодруулга ба тэмдэглэлээ дотно найзууд болон гэр бүлийнхэнтэйгээ хуваалц."
+    find friends: "Найзууд олох"
+    blank slate:
+      heading: "Одоогоор найзууд биш"
+      description: "Энэ хүний найзуудыг харахын тулд найз болох шаардлагатай."
+    limit notice: "Та 150 хүртэл найзтай байх боломжтой"
+    limit description: "Та Библи Апп дахь нөхөрлөлийн хүрээгээ өөрийн сайн таних хүмүүсээр хязгаарласнаар дотно яриа өрнүүлэх хийгээд шинээр таньж мэдсэн зүйлээ итгэл бүхий найзуудтайгаа хуваалцах боломжтой."
+  friendships:
+    find friends title: "Найзууд олох"
+    search by name: "Нэрээр хайх"
+    search button: "Хайх"
+    widget:
+      find friends title: "Найзууд олох"
+      search by name: "Нэрээр хайх"
+      search button: "Хайх"
+    offer success: "Найз болох хүсэлт илгээгдсэн"
+    offer failure: "Найзын хүсэлт илгээхэд алдаа гарсан"
+    create success: "Найзууд боллоо."
+    create failure: "Найзуудын хүрээ үүсгэхэд алдаа гарсан"
+    destroy success: "Хүсэлт татгалзагдсан"
+    destroy failure: "Хүсэлтээс татгалзахад алдаа гарсан"
+    requests title: "Найз болох хүсэлтүүд"
+    requests view all: "Бүх найз болох хүсэлтүүдийг харах"
+    requests none: "Танд найз болох хүсэлт ирээгүй"
+    requests no new: "Шинэ хүсэлтүүд байхгүй"
+    status:
+      pending: "Хүсэлт саатсан"
+      friends: "Найзууд"
+    user wants friendship: "%{user} таны найз болох хүсэлтэй"
+    user wants friendship partial: "таны найз болох хүсэлтэй"
+    form:
+      remove friend button: "Найзаас хасах"
+      remove friend button title: "Энэ хүнийг найзуудын жагсаалтаас хасах"
+      add friend button: "Найзаар нэмэх"
+      add friend button title: "%{user}-д найз болох хүсэлт илгээх"
+      accept button: "Хүлээн Авах"
+      accept request button: "Хүсэлтийг Хүлээн Авах"
+      ignore button: "Үл Тоох"
+      ignore request button: "Хүсэлтийг хойш тавих"
   notes:
+    none user: "%{username} тэмдэглэл арай бичээгүй."
+    blank slate:
+      heading: "Танд одоогоор ямар ч тэмдэг байхгүй байна"
+      description: "Библи уншиж байх үед чинь Бурханы аяархан дуу хоолой чамд сонсогдвол үүнийгээ нэмж бич. Тэмдэглэл чинь <em>хувийн байдлаар хадгалагдах болно. Хэрвээ найзуудтайгаа тэмдэглэлээ хуваалцъя гэвэл нээгээд <em>нийтийн</em> гэж соль. "
+    form:
+      title field: "Гарчиг:"
+      content field: "Агуулга:"
+      highlight field: "Тодруулга: (заавал биш)"
+      reference field: "Ишлэлийн тэмдэглэл (үүд):"
+      status field: "Статус:"
+      save button: "Хадгалах "
+    status:
+      private: "Хувийн"
+      public: "Нийтийн "
+      friends: "Зѳвхѳн найзууд"
+      draft: "Ноорог "
     list title: "Тэмдэглэлүүд"
     loading community: "Гишүүдийн тэмдэглэл ачааллаж байна..."
     no community notes: "Сонгосон ишлэлүүдэд гишүүдийн тэмдэглэл олдсонгүй. Тэмдэглэл үүсгэхийн тулд Библи уншигч дотроос ишлэл сонгоод дараа Библи уншигч дээр байрлах Сонгогдсон товчлуур дээр дарна."
@@ -160,6 +301,7 @@ mn:
     private: "Хувийн"
     is private: "Энэ тэмдэглэлийг хувийн байна."
     draft: "Ноорог"
+    friends: "Найзууд"
     creation form errors: "Таны тэмдэглэлийг үүсгэх явцад дараах алдаа(нууд) гарлаа:"
     reference field: "Ишлэлийн тэмдэглэл (үүд):"
     version field: "Орчуулга:"
@@ -180,7 +322,10 @@ mn:
     cancel: "Цуцлах"
     pop out: "Тэмдэглэл гаргах"
     none found: "Тэмдэглэл олдсонгүй..."
-    successfully deleted: "Тэмдэглэл Арилгагдлаа"
+    create success: "Тэмдэглэл хадгалагдсан."
+    create failure: "Тэмдэглэл хадгалахад алдаа гарсан"
+    destroy success: "Тэмдэглэл устсан"
+    destroy failure: "Тэмдэглэл устгахад алдаа гарсан"
   ref:
     loading secondary: "Хоёрдагч Хувилбараар зааварчилгаа ачааллаж байна..."
     clear verses: "Сонгогдсон Ишлэлүүдийг Хасах"
@@ -211,6 +356,8 @@ mn:
     profile form errors: "Хувийн мэдээлэл шинэчлэх үед алдаа(нууд) гарлаа:"
     email address: "И-мэйл хаяг"
     user name: "Хэрэглэгчийн нэр"
+    first name: "Нэр "
+    last name: "Овог "
     agreement: "Би YouVersion-ий үйлчилгээний %{terms_link} -ийг хүлээн зөвшѳѳрч байна."
     terms and conditions: "журам болон нөхцөл"
     facebook sign up success: "Гайхалтай!  Таны Facebook-ээр дамжуулан бүртгэл үүсгэх эрх олгогдлоо. YouVersion-ий хэрэглэгчийн нэр болон нууц үгээ сонгон цааш үргэлжлүүлнэ үү. "
@@ -228,6 +375,7 @@ mn:
     my profile: "Миний мэдээлэл "
     edit profile: "Хэрэглэгчийн Тохиргоог Засах"
     update profile: "Хувийн Мэдээллээ Шинэчлэх"
+    go to your profile: "Өөрийн хувийн хавтас руу орох"
     other user profile: "%{username}-н Хувийн Мэдээлэл"
     my password: "Нууц Үг Солих "
     edit password: "Нууц үгээ Солих "
@@ -240,6 +388,7 @@ mn:
     edit account_existence: "Данс Устгах"
     delete account button: "Миний YouVersion Бүртгэлийг Устга"
     no devices: "Таны YouVersion Бүртгэлд одоогоор ямар нэгэн хэрэгсэл холбогдоогүй байна."
+    no devices download copy: "Энэхүү Библийн Апп нь YouVersion.com онлайн Библи дээр суурилагдсан бөгөөд бараг бүх төрлийн зөөврийн хэрэгсэлд үнэгүй суулгах боломжтой. Мөн энэ Апп нь хэрэглэгчдэд Библи унших, уншсан ишлэлүүдээ олон нийтийн сүлжээнд хуваалцах, дуртай ишлэлүүддээ хавчуурга үүсгэх зэрэг олон зүйл бий; хөдөлгөөнт амьдралын хэв маягт шаардлагатай бүхий л шинж чанарыг агуулсан. Гар утаснаасаа <a href='https://www.bible.com/app'>bible.com/app</a> орж Библийн Апп татаж авч өөрийн бүртгэлтэйгээ холбоно уу! "
     yes delete: "Тиймээ, Миний Бүртгэлийг устга"
     account delete success: "Таны YouVersion бүртгэл амжилттай устгагдлаа. Бидний зүгээс таныг цаашдаа Библитэй харилцах сайн арга замыг олно гэдэгт найдаж байна. Эдгээр зарим апп-ууд таны цаашдийн үйлсэд тустай байж болох юм: <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Хэрвээ та бүртгэлээ устгавал YouVersion.com болон Bible App дахь  таны бүх мэдээлэл, түүх болон хувийн тохиргоонууд (тэмдэглэл, хавчуурга, тодруулга зэрэг) устгагдах болно. Энэхүү үйлдлийг та болон бидний зүгээс буцаах боломжгүй. Энэ бүгдийг тодорхой ухамсарлаж байгаа бол доорхи үйлдлийг гүйцээнэ үү."
@@ -253,7 +402,7 @@ mn:
     my badges: "Миний Тэмдэгтүүд"
     revised date: "Сүүлд %{date} хянасан"
     update email copy: "Шинэ и-мэйл хаягаа оруулаад шинэчлэх товчлуурыг дарна уу. Шинэ и-мэйл хаягаар баталгаажуулах холбоосыг танд илгээх болно. "
-    edit email: "И-мэйл Шинэчлэх"
+    edit email: "И-Мэйл Хаяг өөрчлөх"
     update email check: "Та и-мэйлээ шалгаад, холбоосон дээр дарж шинэ и-мэйл хаягаа баталгаажуулна уу. "
     confirm update email success: "Баярлалаа! Та и-мэйл хаягаа шинэчиллээ."
     confirm update email error: "Уучлаарай, и-мэйл шинэчлэх үед алдаа гарлаа. "
@@ -354,6 +503,16 @@ mn:
       general title: "do not translate"
       general text: "do not translate"
     profile:
+      blank slate:
+        heading: "Цааш яв, энд үзэх зүйл (одоогоор)  алга"
+        description: "Библитэй эсвэл найзуудтайгаа холбогдож эхлэ, тэгвэл энэ хуудас таны хийсэн зүйлсийг харуулна."
+      visit friend: " %{найз} -н хуудсаар аялах"
+      tab activity: "Үйл ажиллагаа"
+      tab friends: "Найзууд"
+      tab notes: "Тэмдэглэлүүд"
+      tab bookmarks: "Хавчуургууд"
+      tab highlights: "Тодруулгууд"
+      tab badges: "Шагналууд"
       first name: "Нэр "
       last name: "Овог "
       email: "И-мэйл Хаяг "
@@ -393,6 +552,10 @@ mn:
       reading_plans: "Миний уншиж байгаа тѳлѳвлѳгѳѳний талаар надад мэдэгдэх."
       publishing partners: "YouVersion контент түншүүдийн мэдээг надад мэдэгдэх."
       update: "Мэдэгдэлүүд Шинэчлэх"
+      friendships: "Найзын хүсэлт ирэхэд надад мэдэгд"
+      moments: "Найзуудын үйл ажиллагааг надад мэдэгд"
+      comments: "Миний үйл ажиллагаан дахь саналуудыг надад мэдэгд"
+      likes: "Лайк ирэхэд надад мэдэгдэх"
   bookmarks:
     new: "Шинэ Хавчуурга"
     edit: "Засах "
@@ -403,12 +566,14 @@ mn:
     all: "Бүгд"
     labels label: "Шошгууд:"
     title: "Хавчуургууд"
+    my labels: "Миний Шошгууд"
     not found: "Номны хавчуурга нь таны сүүлд уншиж байсан газраа санах, тодорхой нэг номны сүүлд уншссан бүлэг эсвэл дуртай догол мөрийн тайлбарыг шууд өгөх боломжийг өгдөг. Номын хавчуурга нэмэхийн тулд доторх ишлэлээ сонгоно, дараа нь өөрийнхөө Миний хуудас хадгалахын тулд номын хавчуурга гэсэн товчлуурыг дарна. "
     other user not found: "%{username}  ямарч номын хавуурга хадгалаагүй байна."
     creation form errors: "Дараах алдаа(ууд) хавчуурга шинээр хийхэд саад болж байна:"
-    successfully created: "Хавчуурга нэмэгдсэн"
-    successfully deleted: "Хавчуурга Устгагдлаа"
-    successfully updated: "Хавчуурга Шинэчилэгдлээ"
+    create success: "Хавчуурга амжилттай хадгалагдсан."
+    destroy success: "Хавчуурга устгагдлаа"
+    destroy failure: "Энэ хавчуургыг устгахад алдаа гарлаа"
+    update success: "Хавчуурга Шинэчлэгдлээ"
     labels placeholder: "Шошгуудыг таслалаар хуваах"
     save: "Хавчуурга Хадгалах"
     confirm delete: "Тиймээ, би итгэлтэй байна"
@@ -419,10 +584,36 @@ mn:
     update: "Шинэчлэх"
     color: "Ѳнгѳ:"
     version field: "Орчуулга:"
+    none user: "%{username} номын хавчуургагүй"
+    blank slate:
+      heading: "Онцгой ишлэлүүддээ хавчуурга хий"
+      description: "Библи унших явцдаа ишлэлээ сонгон хавчуурга хий. Хавчуургаа харах, засах, эсвэл устгахын тулд энд буц."
+    form:
+      title field: "Гарчиг:"
+      reference field: "Иш татсан:"
+      labels field: "Шошгууд (таслалаар-тусгаарлагдсан):"
+      highlight field: "Тодруулга: (заавал биш)"
+      colors field: "Ѳнгѳ:"
+      update button: "Хавчуурга Шинэчлэх"
+      save button: "Хавчуурга Хадгалах"
   badges:
     earned a badge: "Тэмдэгт Авлаа"
     user badges: "%{user}-н Тэмдэгтүүд"
+    earned date: "%{username} %{ago} өмнө авсан"
+    none me: "Та одоогоор ямар ч тэмдэгт цуглуулаагүй байна."
+    none user: "%{username}  одоогоор ямар ч тэмдэгт аваагүй байна."
   plans:
+    widget:
+      my plans: "Миний Тѳлѳвлѳгѳѳнүүд"
+      start reading: "Уншиж эхлье"
+      view my plans: "Тѳлѳвлѳгѳѳнүүдээ Харах"
+      featured plans: "Тодорсон Төлөвлөгөөнүүд"
+      view all plans: "Бүх Тѳлѳвлѳгѳѳнүүдийг Харах"
+    settings: "Тохиргоо "
+    privacy:
+      visible to friends?: "Та найзууддаа өөрийн үйл ажиллагааг харуулмаар байна уу?"
+      private: "Хувийн"
+      public: "Нийтийн "
     title: "Унших Төлөвлөгөөнүүд"
     browse by category: "Тѳрѳл Үзэх"
     browse plans: "Тѳлѳвлөгѳѳнүүд %{category} Үзэх"
@@ -453,7 +644,6 @@ mn:
     no public plans: "%{username} -нд нийтийн уншлагын тѳлѳвлѳгѳѳг баихгүй."
     filter by lang: "Унших төлөвлөгөөнүүдийг Щэлээр Шүүх"
     plan settings: "Тѳлѳвлѳгѳѳний Тохиргоо"
-    settings: "Тохиргоо "
     search: "Хайх"
     search placeholder: "Тѳлѳвлѳгѳѳнүүд %{category} Хайх"
     subscribe to plan: "Энэ Төлөвлөгөөг Эхлэх"
@@ -566,17 +756,29 @@ mn:
     chapter only: "Уучлаарай, ишлэлүүдийг аудиогоор сонсох боломжгүй. Уншигчийн бүлэг сонгох хэсгээс аудио боломжтой эсэхийг хараарай."
     close player menu: "Хаах"
   highlights:
+    title: "Тодруулгууд"
+    blank slate:
+      heading: "Онцгой ишлэлүүдээ тодруул"
+      description: "Библи унших явцдаа ишлэл сонгон түүнийгээ тодруул. Тодруулгуудаа харах, засах, эсвэл устгахын тулд буцах"
+    none user: "%{username} тодруулгагүй"
     choose color: "Ѳнгѳ Сонгох"
+    create success: "Тодруулга амжилттай хадгалагдсан"
+    create failure: "Тодруулгыг хадгалахад алдаа гарсан"
+    destroy success: "Тодруулга устсан"
+    destroy failure: "Тодруулгыг устгахад алдаа гарсан"
     creation error: "Уучлаарай, тодруулах боломжгүй байна."
     delete error: "Уучлаарай, тодруулга устгах боломжгүй байна."
+    form:
+      save button: "Тодруулга Хадгалах"
   searching:
     bible: "Библи"
-    plans: "Уншилтын Төлөвлөгөөнүүд "
+    plans: "Тѳлѳвлѳгѳѳнүүд"
     users: "Хэрэглэгчид "
     notes: "Тэмдэглэлүүд"
     total results: "Ойролцоогоор %{total}  Үр Дүн"
     suggestion html: "%{suggestion_link} гэж үү?"
     all versions: "Бүх %{language_name} Орчуулга"
+    results for: "Хайлтийн үр дүн:"
   donate:
     donate now: "Одоо Хандивлах"
     donate now intl: "эсвэл олон улсаас хандивлах"
@@ -746,9 +948,6 @@ mn:
     public domain: "Нийтийн Хүртээл "
     loading: "Илүү Орчуулга Ачаалаж байна..."
     load error: "Уучлаарай, илүү орчуулга ачааллахад алдаа гарлаа. Энэ цэсийг хаагаад дахин нэвтрэх үү."
-  reader help:
-    title: "Ишлэл сонгоорой..."
-    line 1: "Хавчуурга хийх, тодруулах, тэмдэглэл үүсгэхээр эсвэл найзуудтайгаа хуваалцахаар ямар нэгэн эсвэл хэсэг бүлэг ишлэлүүд дээр дар!"
   campaigns:
     100m:
       logo: "YouVersion: Библи Апп"
@@ -778,3 +977,9 @@ mn:
       sidebar:
         tagline: "Хамтдаа түүхийг өнөөдөр бичье"
         button: "Библийн Апп Дамжуулах"
+  ui:
+    pagination:
+      next page: "Дараагийн хуудас"
+      previous page: "Өмнөх хуудас"
+    datetime:
+      just now: "дѳнгѳж сая"
